--- a/pasta-frontend/src/inspinia/less/badgets_labels.less
+++ b/pasta-frontend/src/inspinia/less/badgets_labels.less
@@ -1,5 +1,5 @@
 
-.label {
+.-pasta-label {
   background-color: @light-gray;
   color: @label-badget-color;
   font-family: 'Open Sans';
@@ -9,7 +9,7 @@
   text-shadow: none;
 }
 
-.badge {
+.-pasta-badge {
   background-color: @light-gray;
   color: @label-badget-color;
   font-family: 'Open Sans';
@@ -21,47 +21,47 @@
   text-shadow: none;
 }
 
-.label-primary, .badge-primary {
+.-pasta-label-primary, .-pasta-badge-primary {
   background-color: @navy;
   color: #FFFFFF;
 }
 
-.label-success, .badge-success {
+.-pasta-label-success, .-pasta-badge-success {
   background-color: @blue;
   color: #FFFFFF;
 }
 
-.label-warning, .badge-warning {
+.-pasta-label-warning, .-pasta-badge-warning {
   background-color: @yellow;
   color: #FFFFFF;
 }
 
-.label-warning-light, .badge-warning-light {
+.-pasta-label-warning-light, .-pasta-badge-warning-light {
   background-color: @yellow;
   color: #ffffff;
 }
 
-.label-danger, .badge-danger {
+.-pasta-label-danger, .-pasta-badge-danger {
   background-color: @red;
   color: #FFFFFF;
 }
 
-.label-info, .badge-info {
+.-pasta-label-info, .-pasta-badge-info {
   background-color: @lazur;
   color: #FFFFFF;
 }
 
-.label-inverse, .badge-inverse {
+.-pasta-label-inverse, .-pasta-badge-inverse {
   background-color: #262626;
   color: #FFFFFF;
 }
 
-.label-white, .badge-white {
+.-pasta-label-white, .-pasta-badge-white {
   background-color: #FFFFFF;
   color: #5E5E5E;
 }
 
-.label-white, .badge-disable {
+.-pasta-label-white, .-pasta-badge-disable {
   background-color: #2A2E36;
   color: #8B91A0;
 }
