--- a/pasta-frontend/src/inspinia/less/metismenu.less
+++ b/pasta-frontend/src/inspinia/less/metismenu.less
@@ -7,62 +7,62 @@
  * Under MIT License
  */
 
-.metismenu .plus-minus, .metismenu .plus-times {
+.-pasta-metismenu .-pasta-plus-minus, .-pasta-metismenu .-pasta-plus-times {
   float: right
 }
 
-.metismenu .arrow {
+.-pasta-metismenu .-pasta-arrow {
   float: right;
   line-height: 1.42857
 }
 
-.metismenu .glyphicon.arrow:before {
+.-pasta-metismenu .-pasta-glyphicon.-pasta-arrow:before {
   content: "\e079"
 }
 
-.metismenu .active > a > .glyphicon.arrow:before {
+.-pasta-metismenu .-pasta-active > a > .-pasta-glyphicon.-pasta-arrow:before {
   content: "\e114"
 }
 
-.metismenu .fa.arrow:before {
+.-pasta-metismenu .-pasta-fa.-pasta-arrow:before {
   content: "\f104"
 }
 
-.metismenu .active > a > .fa.arrow:before {
+.-pasta-metismenu .-pasta-active > a > .-pasta-fa.-pasta-arrow:before {
   content: "\f107"
 }
 
-.metismenu .ion.arrow:before {
+.-pasta-metismenu .-pasta-ion.-pasta-arrow:before {
   content: "\f3d2"
 }
 
-.metismenu .active > a > .ion.arrow:before {
+.-pasta-metismenu .-pasta-active > a > .-pasta-ion.-pasta-arrow:before {
   content: "\f3d0"
 }
 
-.metismenu .fa.plus-minus:before, .metismenu .fa.plus-times:before {
+.-pasta-metismenu .-pasta-fa.-pasta-plus-minus:before, .-pasta-metismenu .-pasta-fa.-pasta-plus-times:before {
   content: "\f067"
 }
 
-.metismenu .active > a > .fa.plus-times {
+.-pasta-metismenu .-pasta-active > a > .-pasta-fa.-pasta-plus-times {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg)
 }
 
-.metismenu .active > a > .fa.plus-minus:before {
+.-pasta-metismenu .-pasta-active > a > .-pasta-fa.-pasta-plus-minus:before {
   content: "\f068"
 }
 
-.metismenu .collapse {
+.-pasta-metismenu .-pasta-collapse {
   display: none
 }
 
-.metismenu .collapse.in {
+.-pasta-metismenu .-pasta-collapse.-pasta-in {
   display: block
 }
 
-.metismenu .collapsing {
+.-pasta-metismenu .-pasta-collapsing {
   position: relative;
   height: 0;
   overflow: hidden;
