--- a/pasta-frontend/src/inspinia/less/skins.less
+++ b/pasta-frontend/src/inspinia/less/skins.less
@@ -12,127 +12,127 @@
 @skin-1-page-bg: #f4f6fa;
 
 // Custom style
-.skin-1 .minimalize-styl-2 {
+.-pasta-skin-1 .-pasta-minimalize-styl-2 {
   margin: 14px 5px 5px 30px;
 }
 
-.skin-1 .navbar-top-links li:last-child {
+.-pasta-skin-1 .-pasta-navbar-top-links li:last-child {
   margin-right: 30px;
 }
 
-.skin-1.fixed-nav .minimalize-styl-2 {
+.-pasta-skin-1.-pasta-fixed-nav .-pasta-minimalize-styl-2 {
   margin: 14px 5px 5px 15px;
 }
 
-.skin-1 .spin-icon {
+.-pasta-skin-1 .-pasta-spin-icon {
   background: @skin-1-color !important;
 }
 
-.skin-1 .nav-header {
+.-pasta-skin-1 .-pasta-nav-header {
   background: @skin-1-color;
   background: url('patterns/header-profile-skin-1.png');
 }
 
-.skin-1.mini-navbar .nav-second-level {
+.-pasta-skin-1.-pasta-mini-navbar .-pasta-nav-second-level {
   background: @skin-1-nav-bg;
 }
 
-.skin-1 .breadcrumb {
+.-pasta-skin-1 .-pasta-breadcrumb {
   background: transparent;
 }
 
-.skin-1 .page-heading {
+.-pasta-skin-1 .-pasta-page-heading {
   border: none;
 }
 
-.skin-1 .nav > li.active {
+.-pasta-skin-1 .-pasta-nav > li.-pasta-active {
   background: darken(@skin-1-nav-bg, 2%);
 }
 
-.skin-1 .nav > li > a {
+.-pasta-skin-1 .-pasta-nav > li > a {
   color: @skin-1-a-color;
 }
 
-.skin-1 .nav > li.active > a {
+.-pasta-skin-1 .-pasta-nav > li.-pasta-active > a {
   color: #fff;
 }
 
-.skin-1 .navbar-minimalize {
+.-pasta-skin-1 .-pasta-navbar-minimalize {
   background: @skin-1-color;
   border-color: @skin-1-color;
 }
 
-body.skin-1 {
+body.-pasta-skin-1 {
   background: @skin-1-nav-bg;
 }
 
-.skin-1 .navbar-static-top {
+.-pasta-skin-1 .-pasta-navbar-static-top {
   background: #ffffff;
 }
 
-.skin-1 .dashboard-header {
+.-pasta-skin-1 .-pasta-dashboard-header {
   background: transparent;
   border-bottom: none !important;
   border-top: none;
   padding: 20px 30px 10px 30px;
 }
 
-.fixed-nav.skin-1 .navbar-fixed-top {
+.-pasta-fixed-nav.-pasta-skin-1 .-pasta-navbar-fixed-top {
   background: #fff;
 }
 
-.skin-1 .wrapper-content {
+.-pasta-skin-1 .-pasta-wrapper-content {
   padding: 30px 15px;
 }
 
-.skin-1 #page-wrapper {
+.-pasta-skin-1 #page-wrapper {
   background: @skin-1-page-bg;
 }
 
-.skin-1 .ibox-title, .skin-1 .ibox-content {
+.-pasta-skin-1 .-pasta-ibox-title, .-pasta-skin-1 .-pasta-ibox-content {
   border-width: 1px;
 }
 
-.skin-1 .ibox-content:last-child {
+.-pasta-skin-1 .-pasta-ibox-content:last-child {
   border-style: solid solid solid solid;
 }
 
-.skin-1 .nav > li.active {
+.-pasta-skin-1 .-pasta-nav > li.-pasta-active {
   border: none;
 }
 
-.skin-1 .nav-header {
+.-pasta-skin-1 .-pasta-nav-header {
   padding: 35px 25px 25px 25px;
 }
 
-.skin-1 .nav-header a.dropdown-toggle {
+.-pasta-skin-1 .-pasta-nav-header a.-pasta-dropdown-toggle {
   color: #fff;
   margin-top: 10px;
 }
 
-.skin-1 .nav-header a.dropdown-toggle .text-muted {
+.-pasta-skin-1 .-pasta-nav-header a.-pasta-dropdown-toggle .-pasta-text-muted {
   color: #fff;
   opacity: 0.8;
 }
 
-.skin-1 .profile-element {
+.-pasta-skin-1 .-pasta-profile-element {
   text-align: center;
 }
 
-.skin-1 .img-circle {
+.-pasta-skin-1 .-pasta-img-circle {
   border-radius: 5px;
 }
 
-.skin-1 .navbar-default .nav > li > a:hover, .skin-1 .navbar-default .nav > li > a:focus {
+.-pasta-skin-1 .-pasta-navbar-default .-pasta-nav > li > a:hover, .-pasta-skin-1 .-pasta-navbar-default .-pasta-nav > li > a:focus {
   background: darken(@skin-1-nav-bg, 2%);
   color: #fff;
 }
 
-.skin-1 .nav.nav-tabs > li.active > a {
+.-pasta-skin-1 .-pasta-nav.-pasta-nav-tabs > li.-pasta-active > a {
   color: #555;
 }
 
-.skin-1 .nav.nav-tabs > li.active {
+.-pasta-skin-1 .-pasta-nav.-pasta-nav-tabs > li.-pasta-active {
   background: transparent;
 }
 
@@ -150,130 +150,130 @@ body.skin-1 {
 
 // Custom style
 
-body.skin-2 {
+body.-pasta-skin-2 {
   color: #565758 !important;
 }
 
-.skin-2 .minimalize-styl-2 {
+.-pasta-skin-2 .-pasta-minimalize-styl-2 {
   margin: 14px 5px 5px 25px;
 }
 
-.skin-2 .navbar-top-links li:last-child {
+.-pasta-skin-2 .-pasta-navbar-top-links li:last-child {
   margin-right: 25px;
 }
 
-.skin-2 .spin-icon {
+.-pasta-skin-2 .-pasta-spin-icon {
   background: @skin-2-color !important;
 }
 
-.skin-2 .nav-header {
+.-pasta-skin-2 .-pasta-nav-header {
   background: @skin-2-color;
   background: url('patterns/header-profile-skin-2.png');
 }
 
-.skin-2.mini-navbar .nav-second-level {
+.-pasta-skin-2.-pasta-mini-navbar .-pasta-nav-second-level {
   background: @skin-2-nav-bg;
 }
 
-.skin-2 .breadcrumb {
+.-pasta-skin-2 .-pasta-breadcrumb {
   background: transparent;
 }
 
-.skin-2.fixed-nav .minimalize-styl-2 {
+.-pasta-skin-2.-pasta-fixed-nav .-pasta-minimalize-styl-2 {
   margin: 14px 5px 5px 15px;
 }
 
-.skin-2 .page-heading {
+.-pasta-skin-2 .-pasta-page-heading {
   border: none;
   background: rgba(255, 255, 255, 0.7);
 }
 
-.skin-2 .nav > li.active {
+.-pasta-skin-2 .-pasta-nav > li.-pasta-active {
   background: #e0e0e0;
 }
 
-.skin-2 .logo-element {
+.-pasta-skin-2 .-pasta-logo-element {
   padding: 17px 0;
 }
 
-.skin-2 .nav > li > a, .skin-2 .welcome-message {
+.-pasta-skin-2 .-pasta-nav > li > a, .-pasta-skin-2 .-pasta-welcome-message {
   color: #edf6ff;
 }
 
-.skin-2 #top-search::-moz-placeholder {
+.-pasta-skin-2 #top-search::-moz-placeholder {
   color: #edf6ff;
   opacity: 0.5;
 }
 
-.skin-2 #side-menu > li > a, .skin-2 .nav.nav-second-level > li > a {
+.-pasta-skin-2 #side-menu > li > a, .-pasta-skin-2 .-pasta-nav.-pasta-nav-second-level > li > a {
   color: #586b7d;
 }
 
-.skin-2 .nav > li.active > a {
+.-pasta-skin-2 .-pasta-nav > li.-pasta-active > a {
   color: @skin-2-nav-top-bg;
 }
 
-.skin-2.mini-navbar .nav-header {
+.-pasta-skin-2.-pasta-mini-navbar .-pasta-nav-header {
   background: @skin-2-nav-top-bg;
 }
 
-.skin-2 .navbar-minimalize {
+.-pasta-skin-2 .-pasta-navbar-minimalize {
   background: @skin-2-color;
   border-color: @skin-2-color;
 }
 
-.skin-2 .border-bottom {
+.-pasta-skin-2 .-pasta-border-bottom {
   border-bottom: none !important;
 }
 
-.skin-2 #top-search {
+.-pasta-skin-2 #top-search {
   color: #fff;
 }
 
-body.skin-2 #wrapper {
+body.-pasta-skin-2 #wrapper {
   background-color: @skin-2-nav-bg;
 }
 
-.skin-2 .navbar-static-top {
+.-pasta-skin-2 .-pasta-navbar-static-top {
   background: @skin-2-nav-top-bg;
 }
 
-.fixed-nav.skin-2 .navbar-fixed-top {
+.-pasta-fixed-nav.-pasta-skin-2 .-pasta-navbar-fixed-top {
   background: @skin-2-nav-top-bg;
   border-bottom: none !important;
 }
 
-.skin-2 .nav-header {
+.-pasta-skin-2 .-pasta-nav-header {
   padding: 30px 25px 30px 25px;
 }
 
-.skin-2 .dashboard-header {
+.-pasta-skin-2 .-pasta-dashboard-header {
   background: rgba(255, 255, 255, 0.4);
   border-bottom: none !important;
   border-top: none;
   padding: 20px 30px 20px 30px;
 }
 
-.skin-2 .wrapper-content {
+.-pasta-skin-2 .-pasta-wrapper-content {
   padding: 30px 15px;
 }
 
-.skin-2 .dashoard-1 .wrapper-content {
+.-pasta-skin-2 .-pasta-dashoard-1 .-pasta-wrapper-content {
   padding: 0 30px 25px 30px;
 }
 
-.skin-2 .ibox-title {
+.-pasta-skin-2 .-pasta-ibox-title {
   background: rgba(255, 255, 255, 0.7);
   border: none;
   margin-bottom: 1px;
 }
 
-.skin-2 .ibox-content {
+.-pasta-skin-2 .-pasta-ibox-content {
   background: rgba(255, 255, 255, 0.4);
   border: none !important;
 }
 
-.skin-2 #page-wrapper {
+.-pasta-skin-2 #page-wrapper {
   background: rgba(246, 246, 246, 1);
   background: -webkit-radial-gradient(center, ellipse cover, rgba(246, 246, 246, 1) 20%, rgba(213, 213, 213, 1) 100%);
   background: -o-radial-gradient(center, ellipse cover, rgba(246, 246, 246, 1) 20%, rgba(213, 213, 213, 1) 100%);
@@ -282,46 +282,46 @@ body.skin-2 #wrapper {
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#f6f6f6, endColorstr=#d5d5d5)";
 }
 
-.skin-2 .ibox-title, .skin-2 .ibox-content {
+.-pasta-skin-2 .-pasta-ibox-title, .-pasta-skin-2 .-pasta-ibox-content {
   border-width: 1px;
 }
 
-.skin-2 .ibox-content:last-child {
+.-pasta-skin-2 .-pasta-ibox-content:last-child {
   border-style: solid solid solid solid;
 }
 
-.skin-2 .nav > li.active {
+.-pasta-skin-2 .-pasta-nav > li.-pasta-active {
   border: none;
 }
 
-.skin-2 .nav-header a.dropdown-toggle {
+.-pasta-skin-2 .-pasta-nav-header a.-pasta-dropdown-toggle {
   color: #edf6ff;
   margin-top: 10px;
 }
 
-.skin-2 .nav-header a.dropdown-toggle .text-muted {
+.-pasta-skin-2 .-pasta-nav-header a.-pasta-dropdown-toggle .-pasta-text-muted {
   color: #edf6ff;
   opacity: 0.8;
 }
 
-.skin-2 .img-circle {
+.-pasta-skin-2 .-pasta-img-circle {
   border-radius: 10px;
 }
 
-.skin-2 .nav.navbar-top-links > li > a:hover, .skin-2 .nav.navbar-top-links > li > a:focus {
+.-pasta-skin-2 .-pasta-nav.-pasta-navbar-top-links > li > a:hover, .-pasta-skin-2 .-pasta-nav.-pasta-navbar-top-links > li > a:focus {
   background: darken(@skin-2-nav-top-bg, 5%);
 }
 
-.skin-2 .navbar-default .nav > li > a:hover, .skin-2 .navbar-default .nav > li > a:focus {
+.-pasta-skin-2 .-pasta-navbar-default .-pasta-nav > li > a:hover, .-pasta-skin-2 .-pasta-navbar-default .-pasta-nav > li > a:focus {
   background: #e0e0e0;
   color: #213a53;
 }
 
-.skin-2 .nav.nav-tabs > li.active > a {
+.-pasta-skin-2 .-pasta-nav.-pasta-nav-tabs > li.-pasta-active > a {
   color: #555;
 }
 
-.skin-2 .nav.nav-tabs > li.active {
+.-pasta-skin-2 .-pasta-nav.-pasta-nav-tabs > li.-pasta-active {
   background: transparent;
 }
 
@@ -339,130 +339,130 @@ body.skin-2 #wrapper {
 @skin-3-page-bg: #f4f6fa;
 
 // Custom style
-.skin-3 .minimalize-styl-2 {
+.-pasta-skin-3 .-pasta-minimalize-styl-2 {
   margin: 14px 5px 5px 30px;
 }
 
-.skin-3 .navbar-top-links li:last-child {
+.-pasta-skin-3 .-pasta-navbar-top-links li:last-child {
   margin-right: 30px;
 }
 
-.skin-3.fixed-nav .minimalize-styl-2 {
+.-pasta-skin-3.-pasta-fixed-nav .-pasta-minimalize-styl-2 {
   margin: 14px 5px 5px 15px;
 }
 
-.skin-3 .spin-icon {
+.-pasta-skin-3 .-pasta-spin-icon {
   background: @skin-3-color !important;
 }
 
-body.boxed-layout.skin-3 #wrapper {
+body.-pasta-boxed-layout.-pasta-skin-3 #wrapper {
   background: @skin-3-nav-bg;
 }
 
-.skin-3 .nav-header {
+.-pasta-skin-3 .-pasta-nav-header {
   background: @skin-3-color;
   background: url('patterns/header-profile-skin-3.png');
 }
 
-.skin-3.mini-navbar .nav-second-level {
+.-pasta-skin-3.-pasta-mini-navbar .-pasta-nav-second-level {
   background: @skin-3-nav-bg;
 }
 
-.skin-3 .breadcrumb {
+.-pasta-skin-3 .-pasta-breadcrumb {
   background: transparent;
 }
 
-.skin-3 .page-heading {
+.-pasta-skin-3 .-pasta-page-heading {
   border: none;
 }
 
-.skin-3 .nav > li.active {
+.-pasta-skin-3 .-pasta-nav > li.-pasta-active {
   background: darken(@skin-3-nav-bg, 2%);
 }
 
-.fixed-nav.skin-3 .navbar-fixed-top {
+.-pasta-fixed-nav.-pasta-skin-3 .-pasta-navbar-fixed-top {
   background: #fff;
 }
 
-.skin-3 .nav > li > a {
+.-pasta-skin-3 .-pasta-nav > li > a {
   color: @skin-3-a-color;
 }
 
-.skin-3 .nav > li.active > a {
+.-pasta-skin-3 .-pasta-nav > li.-pasta-active > a {
   color: #fff;
 }
 
-.skin-3 .navbar-minimalize {
+.-pasta-skin-3 .-pasta-navbar-minimalize {
   background: @skin-3-color;
   border-color: @skin-3-color;
 }
 
-body.skin-3 {
+body.-pasta-skin-3 {
   background: @skin-3-nav-bg;
 }
 
-.skin-3 .navbar-static-top {
+.-pasta-skin-3 .-pasta-navbar-static-top {
   background: #ffffff;
 }
 
-.skin-3 .dashboard-header {
+.-pasta-skin-3 .-pasta-dashboard-header {
   background: transparent;
   border-bottom: none !important;
   border-top: none;
   padding: 20px 30px 10px 30px;
 }
 
-.skin-3 .wrapper-content {
+.-pasta-skin-3 .-pasta-wrapper-content {
   padding: 30px 15px;
 }
 
-.skin-3 #page-wrapper {
+.-pasta-skin-3 #page-wrapper {
   background: @skin-3-page-bg;
 }
 
-.skin-3 .ibox-title, .skin-3 .ibox-content {
+.-pasta-skin-3 .-pasta-ibox-title, .-pasta-skin-3 .-pasta-ibox-content {
   border-width: 1px;
 }
 
-.skin-3 .ibox-content:last-child {
+.-pasta-skin-3 .-pasta-ibox-content:last-child {
   border-style: solid solid solid solid;
 }
 
-.skin-3 .nav > li.active {
+.-pasta-skin-3 .-pasta-nav > li.-pasta-active {
   border: none;
 }
 
-.skin-3 .nav-header {
+.-pasta-skin-3 .-pasta-nav-header {
   padding: 35px 25px 25px 25px;
 }
 
-.skin-3 .nav-header a.dropdown-toggle {
+.-pasta-skin-3 .-pasta-nav-header a.-pasta-dropdown-toggle {
   color: #fff;
   margin-top: 10px;
 }
 
-.skin-3 .nav-header a.dropdown-toggle .text-muted {
+.-pasta-skin-3 .-pasta-nav-header a.-pasta-dropdown-toggle .-pasta-text-muted {
   color: #fff;
   opacity: 0.8;
 }
 
-.skin-3 .profile-element {
+.-pasta-skin-3 .-pasta-profile-element {
   text-align: center;
 }
 
-.skin-3 .img-circle {
+.-pasta-skin-3 .-pasta-img-circle {
   border-radius: 5px;
 }
 
-.skin-3 .navbar-default .nav > li > a:hover, .skin-3 .navbar-default .nav > li > a:focus {
+.-pasta-skin-3 .-pasta-navbar-default .-pasta-nav > li > a:hover, .-pasta-skin-3 .-pasta-navbar-default .-pasta-nav > li > a:focus {
   background: darken(@skin-3-nav-bg, 2%);
   color: #fff;
 }
 
-.skin-3 .nav.nav-tabs > li.active > a {
+.-pasta-skin-3 .-pasta-nav.-pasta-nav-tabs > li.-pasta-active > a {
   color: #555;
 }
 
-.skin-3 .nav.nav-tabs > li.active {
+.-pasta-skin-3 .-pasta-nav.-pasta-nav-tabs > li.-pasta-active {
   background: transparent;
 }
