--- a/pasta-frontend/src/inspinia/less/spinners.less
+++ b/pasta-frontend/src/inspinia/less/spinners.less
@@ -5,7 +5,7 @@
  *
  */
 
-.sk-spinner-rotating-plane.sk-spinner {
+.-pasta-sk-spinner-rotating-plane.-pasta-sk-spinner {
   width: 30px;
   height: 30px;
   background-color: @spin-color;
@@ -57,14 +57,14 @@
  *    </div>
  *
  */
-.sk-spinner-double-bounce.sk-spinner {
+.-pasta-sk-spinner-double-bounce.-pasta-sk-spinner {
   width: 40px;
   height: 40px;
   position: relative;
   margin: @spin-margin;
 }
 
-.sk-spinner-double-bounce .sk-double-bounce1, .sk-spinner-double-bounce .sk-double-bounce2 {
+.-pasta-sk-spinner-double-bounce .-pasta-sk-double-bounce1, .-pasta-sk-spinner-double-bounce .-pasta-sk-double-bounce2 {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -77,7 +77,7 @@
   animation: sk-doubleBounce 2s infinite ease-in-out;
 }
 
-.sk-spinner-double-bounce .sk-double-bounce2 {
+.-pasta-sk-spinner-double-bounce .-pasta-sk-double-bounce2 {
   -webkit-animation-delay: -1s;
   animation-delay: -1s;
 }
@@ -118,7 +118,7 @@
  *    </div>
  *
  */
-.sk-spinner-wave.sk-spinner {
+.-pasta-sk-spinner-wave.-pasta-sk-spinner {
   margin: @spin-margin;
   width: 50px;
   height: 30px;
@@ -126,7 +126,7 @@
   font-size: 10px;
 }
 
-.sk-spinner-wave div {
+.-pasta-sk-spinner-wave div {
   background-color: @spin-color;
   height: 100%;
   width: 6px;
@@ -135,22 +135,22 @@
   animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
 }
 
-.sk-spinner-wave .sk-rect2 {
+.-pasta-sk-spinner-wave .-pasta-sk-rect2 {
   -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
 }
 
-.sk-spinner-wave .sk-rect3 {
+.-pasta-sk-spinner-wave .-pasta-sk-rect3 {
   -webkit-animation-delay: -1s;
   animation-delay: -1s;
 }
 
-.sk-spinner-wave .sk-rect4 {
+.-pasta-sk-spinner-wave .-pasta-sk-rect4 {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
 
-.sk-spinner-wave .sk-rect5 {
+.-pasta-sk-spinner-wave .-pasta-sk-rect5 {
   -webkit-animation-delay: -0.8s;
   animation-delay: -0.8s;
 }
@@ -188,14 +188,14 @@
  *    </div>
  *
  */
-.sk-spinner-wandering-cubes.sk-spinner {
+.-pasta-sk-spinner-wandering-cubes.-pasta-sk-spinner {
   margin: @spin-margin;
   width: 32px;
   height: 32px;
   position: relative;
 }
 
-.sk-spinner-wandering-cubes .sk-cube1, .sk-spinner-wandering-cubes .sk-cube2 {
+.-pasta-sk-spinner-wandering-cubes .-pasta-sk-cube1, .-pasta-sk-spinner-wandering-cubes .-pasta-sk-cube2 {
   background-color: @spin-color;
   width: 10px;
   height: 10px;
@@ -206,7 +206,7 @@
   animation: sk-wanderingCubeMove 1.8s infinite ease-in-out;
 }
 
-.sk-spinner-wandering-cubes .sk-cube2 {
+.-pasta-sk-spinner-wandering-cubes .-pasta-sk-cube2 {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
@@ -273,7 +273,7 @@
  *    <div class="sk-spinner sk-spinner-pulse"></div>
  *
  */
-.sk-spinner-pulse.sk-spinner {
+.-pasta-sk-spinner-pulse.-pasta-sk-spinner {
   width: 40px;
   height: 40px;
   margin: @spin-margin;
@@ -318,7 +318,7 @@
  *    </div>
  *
  */
-.sk-spinner-chasing-dots.sk-spinner {
+.-pasta-sk-spinner-chasing-dots.-pasta-sk-spinner {
   margin: @spin-margin;
   width: 40px;
   height: 40px;
@@ -328,7 +328,7 @@
   animation: sk-chasingDotsRotate 2s infinite linear;
 }
 
-.sk-spinner-chasing-dots .sk-dot1, .sk-spinner-chasing-dots .sk-dot2 {
+.-pasta-sk-spinner-chasing-dots .-pasta-sk-dot1, .-pasta-sk-spinner-chasing-dots .-pasta-sk-dot2 {
   width: 60%;
   height: 60%;
   display: inline-block;
@@ -340,7 +340,7 @@
   animation: sk-chasingDotsBounce 2s infinite ease-in-out;
 }
 
-.sk-spinner-chasing-dots .sk-dot2 {
+.-pasta-sk-spinner-chasing-dots .-pasta-sk-dot2 {
   top: auto;
   bottom: 0;
   -webkit-animation-delay: -1s;
@@ -395,13 +395,13 @@
  *    </div>
  *
  */
-.sk-spinner-three-bounce.sk-spinner {
+.-pasta-sk-spinner-three-bounce.-pasta-sk-spinner {
   margin: @spin-margin;
   width: 70px;
   text-align: center;
 }
 
-.sk-spinner-three-bounce div {
+.-pasta-sk-spinner-three-bounce div {
   width: 18px;
   height: 18px;
   background-color: @spin-color;
@@ -414,12 +414,12 @@
   animation-fill-mode: both;
 }
 
-.sk-spinner-three-bounce .sk-bounce1 {
+.-pasta-sk-spinner-three-bounce .-pasta-sk-bounce1 {
   -webkit-animation-delay: -0.32s;
   animation-delay: -0.32s;
 }
 
-.sk-spinner-three-bounce .sk-bounce2 {
+.-pasta-sk-spinner-three-bounce .-pasta-sk-bounce2 {
   -webkit-animation-delay: -0.16s;
   animation-delay: -0.16s;
 }
@@ -467,14 +467,14 @@
  *    </div>
  *
  */
-.sk-spinner-circle.sk-spinner {
+.-pasta-sk-spinner-circle.-pasta-sk-spinner {
   margin: @spin-margin;
   width: 22px;
   height: 22px;
   position: relative;
 }
 
-.sk-spinner-circle .sk-circle {
+.-pasta-sk-spinner-circle .-pasta-sk-circle {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -482,7 +482,7 @@
   top: 0;
 }
 
-.sk-spinner-circle .sk-circle:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle:before {
   content: '';
   display: block;
   margin: @spin-margin;
@@ -497,123 +497,123 @@
   animation-fill-mode: both;
 }
 
-.sk-spinner-circle .sk-circle2 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle2 {
   -webkit-transform: rotate(30deg);
   -ms-transform: rotate(30deg);
   transform: rotate(30deg);
 }
 
-.sk-spinner-circle .sk-circle3 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle3 {
   -webkit-transform: rotate(60deg);
   -ms-transform: rotate(60deg);
   transform: rotate(60deg);
 }
 
-.sk-spinner-circle .sk-circle4 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle4 {
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 
-.sk-spinner-circle .sk-circle5 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle5 {
   -webkit-transform: rotate(120deg);
   -ms-transform: rotate(120deg);
   transform: rotate(120deg);
 }
 
-.sk-spinner-circle .sk-circle6 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle6 {
   -webkit-transform: rotate(150deg);
   -ms-transform: rotate(150deg);
   transform: rotate(150deg);
 }
 
-.sk-spinner-circle .sk-circle7 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle7 {
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 
-.sk-spinner-circle .sk-circle8 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle8 {
   -webkit-transform: rotate(210deg);
   -ms-transform: rotate(210deg);
   transform: rotate(210deg);
 }
 
-.sk-spinner-circle .sk-circle9 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle9 {
   -webkit-transform: rotate(240deg);
   -ms-transform: rotate(240deg);
   transform: rotate(240deg);
 }
 
-.sk-spinner-circle .sk-circle10 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle10 {
   -webkit-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
   transform: rotate(270deg);
 }
 
-.sk-spinner-circle .sk-circle11 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle11 {
   -webkit-transform: rotate(300deg);
   -ms-transform: rotate(300deg);
   transform: rotate(300deg);
 }
 
-.sk-spinner-circle .sk-circle12 {
+.-pasta-sk-spinner-circle .-pasta-sk-circle12 {
   -webkit-transform: rotate(330deg);
   -ms-transform: rotate(330deg);
   transform: rotate(330deg);
 }
 
-.sk-spinner-circle .sk-circle2:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle2:before {
   -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
 }
 
-.sk-spinner-circle .sk-circle3:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle3:before {
   -webkit-animation-delay: -1s;
   animation-delay: -1s;
 }
 
-.sk-spinner-circle .sk-circle4:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle4:before {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
 
-.sk-spinner-circle .sk-circle5:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle5:before {
   -webkit-animation-delay: -0.8s;
   animation-delay: -0.8s;
 }
 
-.sk-spinner-circle .sk-circle6:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle6:before {
   -webkit-animation-delay: -0.7s;
   animation-delay: -0.7s;
 }
 
-.sk-spinner-circle .sk-circle7:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle7:before {
   -webkit-animation-delay: -0.6s;
   animation-delay: -0.6s;
 }
 
-.sk-spinner-circle .sk-circle8:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle8:before {
   -webkit-animation-delay: -0.5s;
   animation-delay: -0.5s;
 }
 
-.sk-spinner-circle .sk-circle9:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle9:before {
   -webkit-animation-delay: -0.4s;
   animation-delay: -0.4s;
 }
 
-.sk-spinner-circle .sk-circle10:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle10:before {
   -webkit-animation-delay: -0.3s;
   animation-delay: -0.3s;
 }
 
-.sk-spinner-circle .sk-circle11:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle11:before {
   -webkit-animation-delay: -0.2s;
   animation-delay: -0.2s;
 }
 
-.sk-spinner-circle .sk-circle12:before {
+.-pasta-sk-spinner-circle .-pasta-sk-circle12:before {
   -webkit-animation-delay: -0.1s;
   animation-delay: -0.1s;
 }
@@ -658,7 +658,7 @@
  *    </div>
  *
  */
-.sk-spinner-cube-grid {
+.-pasta-sk-spinner-cube-grid {
   /*
    * Spinner positions
    * 1 2 3
@@ -667,13 +667,13 @@
    */
 }
 
-.sk-spinner-cube-grid.sk-spinner {
+.-pasta-sk-spinner-cube-grid.-pasta-sk-spinner {
   width: 30px;
   height: 30px;
   margin: @spin-margin;
 }
 
-.sk-spinner-cube-grid .sk-cube {
+.-pasta-sk-spinner-cube-grid .-pasta-sk-cube {
   width: 33%;
   height: 33%;
   background-color: @spin-color;
@@ -682,47 +682,47 @@
   animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
 }
 
-.sk-spinner-cube-grid .sk-cube:nth-child(1) {
+.-pasta-sk-spinner-cube-grid .-pasta-sk-cube:nth-child(1) {
   -webkit-animation-delay: 0.2s;
   animation-delay: 0.2s;
 }
 
-.sk-spinner-cube-grid .sk-cube:nth-child(2) {
+.-pasta-sk-spinner-cube-grid .-pasta-sk-cube:nth-child(2) {
   -webkit-animation-delay: 0.3s;
   animation-delay: 0.3s;
 }
 
-.sk-spinner-cube-grid .sk-cube:nth-child(3) {
+.-pasta-sk-spinner-cube-grid .-pasta-sk-cube:nth-child(3) {
   -webkit-animation-delay: 0.4s;
   animation-delay: 0.4s;
 }
 
-.sk-spinner-cube-grid .sk-cube:nth-child(4) {
+.-pasta-sk-spinner-cube-grid .-pasta-sk-cube:nth-child(4) {
   -webkit-animation-delay: 0.1s;
   animation-delay: 0.1s;
 }
 
-.sk-spinner-cube-grid .sk-cube:nth-child(5) {
+.-pasta-sk-spinner-cube-grid .-pasta-sk-cube:nth-child(5) {
   -webkit-animation-delay: 0.2s;
   animation-delay: 0.2s;
 }
 
-.sk-spinner-cube-grid .sk-cube:nth-child(6) {
+.-pasta-sk-spinner-cube-grid .-pasta-sk-cube:nth-child(6) {
   -webkit-animation-delay: 0.3s;
   animation-delay: 0.3s;
 }
 
-.sk-spinner-cube-grid .sk-cube:nth-child(7) {
+.-pasta-sk-spinner-cube-grid .-pasta-sk-cube:nth-child(7) {
   -webkit-animation-delay: 0s;
   animation-delay: 0s;
 }
 
-.sk-spinner-cube-grid .sk-cube:nth-child(8) {
+.-pasta-sk-spinner-cube-grid .-pasta-sk-cube:nth-child(8) {
   -webkit-animation-delay: 0.1s;
   animation-delay: 0.1s;
 }
 
-.sk-spinner-cube-grid .sk-cube:nth-child(9) {
+.-pasta-sk-spinner-cube-grid .-pasta-sk-cube:nth-child(9) {
   -webkit-animation-delay: 0.2s;
   animation-delay: 0.2s;
 }
@@ -759,7 +759,7 @@
  *    </div>
  *
  */
-.sk-spinner-wordpress.sk-spinner {
+.-pasta-sk-spinner-wordpress.-pasta-sk-spinner {
   background-color: @spin-color;
   width: 30px;
   height: 30px;
@@ -770,7 +770,7 @@
   animation: sk-innerCircle 1s linear infinite;
 }
 
-.sk-spinner-wordpress .sk-inner-circle {
+.-pasta-sk-spinner-wordpress .-pasta-sk-inner-circle {
   display: block;
   background-color: #fff;
   width: 8px;
@@ -824,14 +824,14 @@
  *    </div>
  *
  */
-.sk-spinner-fading-circle.sk-spinner {
+.-pasta-sk-spinner-fading-circle.-pasta-sk-spinner {
   margin: @spin-margin;
   width: 22px;
   height: 22px;
   position: relative;
 }
 
-.sk-spinner-fading-circle .sk-circle {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -839,7 +839,7 @@
   top: 0;
 }
 
-.sk-spinner-fading-circle .sk-circle:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle:before {
   content: '';
   display: block;
   margin: @spin-margin;
@@ -854,123 +854,123 @@
   animation-fill-mode: both;
 }
 
-.sk-spinner-fading-circle .sk-circle2 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle2 {
   -webkit-transform: rotate(30deg);
   -ms-transform: rotate(30deg);
   transform: rotate(30deg);
 }
 
-.sk-spinner-fading-circle .sk-circle3 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle3 {
   -webkit-transform: rotate(60deg);
   -ms-transform: rotate(60deg);
   transform: rotate(60deg);
 }
 
-.sk-spinner-fading-circle .sk-circle4 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle4 {
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 
-.sk-spinner-fading-circle .sk-circle5 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle5 {
   -webkit-transform: rotate(120deg);
   -ms-transform: rotate(120deg);
   transform: rotate(120deg);
 }
 
-.sk-spinner-fading-circle .sk-circle6 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle6 {
   -webkit-transform: rotate(150deg);
   -ms-transform: rotate(150deg);
   transform: rotate(150deg);
 }
 
-.sk-spinner-fading-circle .sk-circle7 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle7 {
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 
-.sk-spinner-fading-circle .sk-circle8 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle8 {
   -webkit-transform: rotate(210deg);
   -ms-transform: rotate(210deg);
   transform: rotate(210deg);
 }
 
-.sk-spinner-fading-circle .sk-circle9 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle9 {
   -webkit-transform: rotate(240deg);
   -ms-transform: rotate(240deg);
   transform: rotate(240deg);
 }
 
-.sk-spinner-fading-circle .sk-circle10 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle10 {
   -webkit-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
   transform: rotate(270deg);
 }
 
-.sk-spinner-fading-circle .sk-circle11 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle11 {
   -webkit-transform: rotate(300deg);
   -ms-transform: rotate(300deg);
   transform: rotate(300deg);
 }
 
-.sk-spinner-fading-circle .sk-circle12 {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle12 {
   -webkit-transform: rotate(330deg);
   -ms-transform: rotate(330deg);
   transform: rotate(330deg);
 }
 
-.sk-spinner-fading-circle .sk-circle2:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle2:before {
   -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
 }
 
-.sk-spinner-fading-circle .sk-circle3:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle3:before {
   -webkit-animation-delay: -1s;
   animation-delay: -1s;
 }
 
-.sk-spinner-fading-circle .sk-circle4:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle4:before {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
 
-.sk-spinner-fading-circle .sk-circle5:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle5:before {
   -webkit-animation-delay: -0.8s;
   animation-delay: -0.8s;
 }
 
-.sk-spinner-fading-circle .sk-circle6:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle6:before {
   -webkit-animation-delay: -0.7s;
   animation-delay: -0.7s;
 }
 
-.sk-spinner-fading-circle .sk-circle7:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle7:before {
   -webkit-animation-delay: -0.6s;
   animation-delay: -0.6s;
 }
 
-.sk-spinner-fading-circle .sk-circle8:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle8:before {
   -webkit-animation-delay: -0.5s;
   animation-delay: -0.5s;
 }
 
-.sk-spinner-fading-circle .sk-circle9:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle9:before {
   -webkit-animation-delay: -0.4s;
   animation-delay: -0.4s;
 }
 
-.sk-spinner-fading-circle .sk-circle10:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle10:before {
   -webkit-animation-delay: -0.3s;
   animation-delay: -0.3s;
 }
 
-.sk-spinner-fading-circle .sk-circle11:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle11:before {
   -webkit-animation-delay: -0.2s;
   animation-delay: -0.2s;
 }
 
-.sk-spinner-fading-circle .sk-circle12:before {
+.-pasta-sk-spinner-fading-circle .-pasta-sk-circle12:before {
   -webkit-animation-delay: -0.1s;
   animation-delay: -0.1s;
 }
