--- a/pasta-frontend/src/inspinia/less/style.less
+++ b/pasta-frontend/src/inspinia/less/style.less
@@ -48,7 +48,7 @@
 
 // Clear layout on print mode
 @media print {
-  nav.navbar-static-side {
+  nav.-pasta-navbar-static-side {
     display: none;
   }
 
