--- a/pasta-frontend/src/inspinia/less/theme-config.less
+++ b/pasta-frontend/src/inspinia/less/theme-config.less
@@ -5,25 +5,25 @@
  *
 */
 
-.theme-config {
+.-pasta-theme-config {
   position: absolute;
   top: 90px;
   right: 0;
   overflow: hidden;
 }
 
-.theme-config-box {
+.-pasta-theme-config-box {
   margin-right: -220px;
   position: relative;
   z-index: 2000;
   transition-duration: 0.8s;
 }
 
-.theme-config-box.show {
+.-pasta-theme-config-box.-pasta-show {
   margin-right: 0;
 }
 
-.spin-icon {
+.-pasta-spin-icon {
   background: @navy;
   position: absolute;
   padding: 7px 10px 7px 13px;
@@ -36,13 +36,13 @@
   cursor: pointer;
 }
 
-.skin-setttings {
+.-pasta-skin-setttings {
   width: 220px;
   margin-left: 40px;
   background: @gray;
 }
 
-.skin-setttings .title {
+.-pasta-skin-setttings .-pasta-title {
   background: #efefef;
   text-align: center;
   text-transform: uppercase;
@@ -52,63 +52,63 @@
   font-size: 12px;
 }
 
-.setings-item {
+.-pasta-setings-item {
   padding: 10px 30px;
 }
 
-.setings-item.skin {
+.-pasta-setings-item.-pasta-skin {
   text-align: center;
 }
 
-.setings-item .switch {
+.-pasta-setings-item .-pasta-switch {
   float: right;
 }
 
-.skin-name a {
+.-pasta-skin-name a {
   text-transform: uppercase;
 }
 
-.setings-item a {
+.-pasta-setings-item a {
   color: #fff;
 }
 
-.default-skin, .blue-skin, .ultra-skin, .yellow-skin {
+.-pasta-default-skin, .-pasta-blue-skin, .-pasta-ultra-skin, .-pasta-yellow-skin {
   text-align: center;
 }
 
-.default-skin {
+.-pasta-default-skin {
   font-weight: 600;
   background: #283A49;
 }
 
-.default-skin:hover {
+.-pasta-default-skin:hover {
   background: #1e2e3d;
 }
 
-.blue-skin {
+.-pasta-blue-skin {
   font-weight: 600;
   background: url("patterns/header-profile-skin-1.png") repeat scroll 0 0;
 }
 
-.blue-skin:hover {
+.-pasta-blue-skin:hover {
   background: #0d8ddb;
 }
 
-.yellow-skin {
+.-pasta-yellow-skin {
   font-weight: 600;
   background: url("patterns/header-profile-skin-3.png") repeat scroll 0 100%;
 }
 
-.yellow-skin:hover {
+.-pasta-yellow-skin:hover {
   background: #ce8735;
 }
 
-.ultra-skin {
+.-pasta-ultra-skin {
   padding: 20px 10px;
   font-weight: 600;
   background: url("patterns/3.png") repeat scroll 0 0;
 }
 
-.ultra-skin:hover {
+.-pasta-ultra-skin:hover {
   background: url("patterns/4.png") repeat scroll 0 0;
 }
