--- a/pasta-frontend/src/inspinia/less/top_navigation.less
+++ b/pasta-frontend/src/inspinia/less/top_navigation.less
@@ -2,131 +2,131 @@
   margin-left: 0;
 }
 
-.top-navigation .navbar-nav .dropdown-menu > .active > a {
+.-pasta-top-navigation .-pasta-navbar-nav .-pasta-dropdown-menu > .-pasta-active > a {
   background: white;
   color: @navy;
   font-weight: bold;
 }
 
-.white-bg .navbar-fixed-top, .white-bg .navbar-static-top {
+.-pasta-white-bg .-pasta-navbar-fixed-top, .-pasta-white-bg .-pasta-navbar-static-top {
   background: #fff;
 }
 
-.top-navigation .navbar {
+.-pasta-top-navigation .-pasta-navbar {
   margin-bottom: 0;
 }
 
-.top-navigation .nav > li > a {
+.-pasta-top-navigation .-pasta-nav > li > a {
   padding: 15px 20px;
   color: #676a6c;
 }
 
-.top-navigation .nav > li a:hover, .top-navigation .nav > li a:focus {
+.-pasta-top-navigation .-pasta-nav > li a:hover, .-pasta-top-navigation .-pasta-nav > li a:focus {
   background: #fff;
   color: @navy;
 }
 
-.top-navigation .nav > li.active {
+.-pasta-top-navigation .-pasta-nav > li.-pasta-active {
   background: #fff;
   border: none;
 }
 
-.top-navigation .nav > li.active > a {
+.-pasta-top-navigation .-pasta-nav > li.-pasta-active > a {
   color: @navy;
 }
 
-.top-navigation .navbar-right {
+.-pasta-top-navigation .-pasta-navbar-right {
   margin-right: 10px;
 }
 
-.top-navigation .navbar-nav .dropdown-menu {
+.-pasta-top-navigation .-pasta-navbar-nav .-pasta-dropdown-menu {
   box-shadow: none;
   border: 1px solid #e7eaec;
 }
 
-.top-navigation .dropdown-menu > li > a {
+.-pasta-top-navigation .-pasta-dropdown-menu > li > a {
   margin: 0;
   padding: 7px 20px;
 }
 
-.navbar .dropdown-menu {
+.-pasta-navbar .-pasta-dropdown-menu {
   margin-top: 0;
 }
 
-.top-navigation .navbar-brand {
+.-pasta-top-navigation .-pasta-navbar-brand {
   background: @navy;
   color: #fff;
   padding: 15px 25px;
 }
 
-.top-navigation .navbar-top-links li:last-child {
+.-pasta-top-navigation .-pasta-navbar-top-links li:last-child {
   margin-right: 0;
 }
 
-.top-navigation.mini-navbar #page-wrapper,
-.top-navigation.body-small.fixed-sidebar.mini-navbar #page-wrapper,
-.mini-navbar .top-navigation #page-wrapper,
-.body-small.fixed-sidebar.mini-navbar .top-navigation #page-wrapper,
-.canvas-menu #page-wrapper {
+.-pasta-top-navigation.-pasta-mini-navbar #page-wrapper,
+.-pasta-top-navigation.-pasta-body-small.-pasta-fixed-sidebar.-pasta-mini-navbar #page-wrapper,
+.-pasta-mini-navbar .-pasta-top-navigation #page-wrapper,
+.-pasta-body-small.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-top-navigation #page-wrapper,
+.-pasta-canvas-menu #page-wrapper {
   margin: 0;
 }
 
-.top-navigation.fixed-nav #wrapper, .fixed-nav #wrapper.top-navigation {
+.-pasta-top-navigation.-pasta-fixed-nav #wrapper, .-pasta-fixed-nav #wrapper.-pasta-top-navigation {
   margin-top: 50px;
 }
 
-.top-navigation .footer.fixed {
+.-pasta-top-navigation .-pasta-footer.-pasta-fixed {
   margin-left: 0 !important;
 }
 
-.top-navigation .wrapper.wrapper-content {
+.-pasta-top-navigation .-pasta-wrapper.-pasta-wrapper-content {
   padding: 40px;
 }
 
-.top-navigation.body-small .wrapper.wrapper-content, .body-small .top-navigation .wrapper.wrapper-content {
+.-pasta-top-navigation.-pasta-body-small .-pasta-wrapper.-pasta-wrapper-content, .-pasta-body-small .-pasta-top-navigation .-pasta-wrapper.-pasta-wrapper-content {
   padding: 40px 0 40px 0;
 }
 
-.navbar-toggle {
+.-pasta-navbar-toggle {
   background-color: @navy;
   color: #fff;
   padding: 6px 12px;
   font-size: 14px;
 }
 
-.top-navigation .navbar-nav .open .dropdown-menu > li > a, .top-navigation .navbar-nav .open .dropdown-menu .dropdown-header {
+.-pasta-top-navigation .-pasta-navbar-nav .-pasta-open .-pasta-dropdown-menu > li > a, .-pasta-top-navigation .-pasta-navbar-nav .-pasta-open .-pasta-dropdown-menu .-pasta-dropdown-header {
   padding: 10px 15px 10px 20px;
 }
 
 @media (max-width: 768px) {
-  .top-navigation .navbar-header {
+  .-pasta-top-navigation .-pasta-navbar-header {
     display: block;
     float: none;
   }
 }
 
-.menu-visible-lg, .menu-visible-md {
+.-pasta-menu-visible-lg, .-pasta-menu-visible-md {
   display: none !important;
 }
 
 @media (min-width: 1200px) {
-  .menu-visible-lg {
+  .-pasta-menu-visible-lg {
     display: block !important;
   }
 }
 
 @media (min-width: 992px) {
-  .menu-visible-md {
+  .-pasta-menu-visible-md {
     display: block !important;
   }
 }
 
 @media (max-width: 767px) {
-  .menu-visible-md {
+  .-pasta-menu-visible-md {
     display: block !important;
   }
 
-  .menu-visible-lg {
+  .-pasta-menu-visible-lg {
     display: block !important;
   }
 }
