--- a/pasta-frontend/src/less/custom.less
+++ b/pasta-frontend/src/less/custom.less
@@ -1,6 +1,6 @@
-body {
-  background-color: #FFFFFF;
-}
+// body {
+//   background-color: #FFFFFF;
+// }
 
 .openpaas-service-header {
   padding-left: 15px;
@@ -107,9 +107,9 @@ body.fixed-nav #wrapper .navbar-static-side {
   transition: all .5s;
 }
 
-#page-wrapper {
-  padding: 0 0;
-}
+// #page-wrapper {
+//   padding: 0 0;
+// }
 
 .cobalt-bg {
   background-color: #293846
