--- a/pasta-frontend/src/inspinia/less/landing.less
+++ b/pasta-frontend/src/inspinia/less/landing.less
@@ -9,7 +9,7 @@
 
 /* PACE PLUGIN
 -------------------------------------------------- */
-.landing-page.pace .pace-progress {
+.-pasta-landing-page.-pasta-pace .-pasta-pace-progress {
   background: #fff;
   position: fixed;
   z-index: 2000;
@@ -23,29 +23,29 @@
 
 }
 
-.pace-inactive {
+.-pasta-pace-inactive {
   display: none;
 }
 
-body.landing-page {
+body.-pasta-landing-page {
   color: @text-color;
   font-family: 'Open Sans', helvetica, arial, sans-serif;
   background-color: #fff;
 }
 
-.landing-page {
+.-pasta-landing-page {
 
-  span.navy {
+  span.-pasta-navy {
     color: @navy;
   }
-  p.text-color {
+  p.-pasta-text-color {
     color: @text-color;
   }
-  a.navy-link {
+  a.-pasta-navy-link {
     color: @navy;
     text-decoration: none;
   }
-  a.navy-link:hover {
+  a.-pasta-navy-link:hover {
     color: darken(@navy, 5%);
   }
   section p {
@@ -60,7 +60,7 @@ body.landing-page {
     font-size: 30px;
     font-weight: 200;
   }
-  .navy-line {
+  .-pasta-navy-line {
     width: 60px;
     height: 1px;
     margin: 60px auto 0;
@@ -68,7 +68,7 @@ body.landing-page {
   }
   /* CUSTOMIZE THE NAVBAR
   -------------------------------------------------- */
-  .navbar-wrapper {
+  .-pasta-navbar-wrapper {
     position: fixed;
     top: 0;
     right: 0;
@@ -76,25 +76,25 @@ body.landing-page {
     z-index: 200;
   }
   /* Flip around the padding for proper display in narrow viewports */
-  .navbar-wrapper > .container {
+  .-pasta-navbar-wrapper > .-pasta-container {
     padding-right: 0;
     padding-left: 0;
   }
-  .navbar-wrapper .navbar {
+  .-pasta-navbar-wrapper .-pasta-navbar {
     padding-right: 15px;
     padding-left: 15px;
   }
-  .navbar-default.navbar-scroll {
+  .-pasta-navbar-default.-pasta-navbar-scroll {
     background-color: #fff;
     border-color: #fff;
     padding: 15px 0;
   }
-  .navbar-default {
+  .-pasta-navbar-default {
     background-color: transparent;
     border-color: transparent;
     transition: all 0.3s ease-in-out 0s;
   }
-  .navbar-default .nav li a {
+  .-pasta-navbar-default .-pasta-nav li a {
     color: #fff;
     font-family: 'Open Sans', helvetica, arial, sans-serif;
     font-weight: 700;
@@ -102,41 +102,41 @@ body.landing-page {
     text-transform: uppercase;
     font-size: 14px;
   }
-  .navbar-nav > li > a {
+  .-pasta-navbar-nav > li > a {
     padding-top: 25px;
     border-top: 6px solid transparent;
   }
-  .navbar-default .navbar-nav > .active > a,
-  .navbar-default .navbar-nav > .active > a:hover {
+  .-pasta-navbar-default .-pasta-navbar-nav > .-pasta-active > a,
+  .-pasta-navbar-default .-pasta-navbar-nav > .-pasta-active > a:hover {
     background: transparent;
     color: #fff;
     border-top: 6px solid @navy;
   }
-  .navbar-default .navbar-nav > li > a:hover,
-  .navbar-default .navbar-nav > li > a:focus {
+  .-pasta-navbar-default .-pasta-navbar-nav > li > a:hover,
+  .-pasta-navbar-default .-pasta-navbar-nav > li > a:focus {
     color: @navy;
     background: inherit;
   }
-  .navbar-default .navbar-nav > .active > a:focus {
+  .-pasta-navbar-default .-pasta-navbar-nav > .-pasta-active > a:focus {
     background: transparent;
     color: #fff;
   }
 
-  .navbar-default .navbar-nav > .active > a:focus {
+  .-pasta-navbar-default .-pasta-navbar-nav > .-pasta-active > a:focus {
     background: transparent;
     color: #ffffff;
   }
 
-  .navbar-default.navbar-scroll .navbar-nav > .active > a:focus {
+  .-pasta-navbar-default.-pasta-navbar-scroll .-pasta-navbar-nav > .-pasta-active > a:focus {
     background: transparent;
     color: inherit;
   }
-  .navbar-default .navbar-brand:hover,
-  .navbar-default .navbar-brand:focus {
+  .-pasta-navbar-default .-pasta-navbar-brand:hover,
+  .-pasta-navbar-default .-pasta-navbar-brand:focus {
     background: darken(@navy, 5%);
     color: #fff;
   }
-  .navbar-default .navbar-brand {
+  .-pasta-navbar-default .-pasta-navbar-brand {
     color: #fff;
     height: auto;
     display: block;
@@ -147,45 +147,45 @@ body.landing-page {
     font-weight: 700;
     transition: all 0.3s ease-in-out 0s;
   }
-  .navbar-scroll.navbar-default .nav li a {
+  .-pasta-navbar-scroll.-pasta-navbar-default .-pasta-nav li a {
     color: @text-color;
   }
-  .navbar-scroll.navbar-default .nav li a:hover {
+  .-pasta-navbar-scroll.-pasta-navbar-default .-pasta-nav li a:hover {
     color: @navy;
   }
-  .navbar-wrapper .navbar.navbar-scroll {
+  .-pasta-navbar-wrapper .-pasta-navbar.-pasta-navbar-scroll {
     padding-top: 0;
     padding-bottom: 0;
     border-bottom: 1px solid @border-color;
     border-radius: 0;
   }
 
-  .nav > li.active {
+  .-pasta-nav > li.-pasta-active {
     border: none;
     background: inherit;
   }
 
-  .nav > li > a {
+  .-pasta-nav > li > a {
     padding: 25px 10px 15px 10px;
   }
-  .navbar-scroll .navbar-nav > li > a {
+  .-pasta-navbar-scroll .-pasta-navbar-nav > li > a {
     padding: 20px 10px;
   }
 
-  .navbar-default .navbar-nav > .active > a,
-  .navbar-default .navbar-nav > .active > a:hover {
+  .-pasta-navbar-default .-pasta-navbar-nav > .-pasta-active > a,
+  .-pasta-navbar-default .-pasta-navbar-nav > .-pasta-active > a:hover {
     border-top: 6px solid @navy;
   }
 
-  .navbar-fixed-top {
+  .-pasta-navbar-fixed-top {
     border: none !important;
   }
 
-  .navbar-fixed-top.navbar-scroll {
+  .-pasta-navbar-fixed-top.-pasta-navbar-scroll {
     border-bottom: 1px solid @border-color !important;
   }
 
-  .navbar.navbar-scroll .navbar-brand {
+  .-pasta-navbar.-pasta-navbar-scroll .-pasta-navbar-brand {
     margin-top: 15px;
     border-radius: 5px;
     font-size: 12px;
@@ -194,73 +194,73 @@ body.landing-page {
   }
   /* BACKGROUNDS SLIDER
   -------------------------------------------------- */
-  .header-back {
+  .-pasta-header-back {
     height: 470px;
     width: 100%;
   }
-  .header-back.one {
+  .-pasta-header-back.one {
     background: url('../img/landing/header_one.jpg') 50% 0 no-repeat;
   }
-  .header-back.two {
+  .-pasta-header-back.two {
     background: url('../img/landing/header_two.jpg') 50% 0 no-repeat;
   }
   /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
   /* Carousel base class */
-  .carousel {
+  .-pasta-carousel {
     height: 470px;
   }
   /* Since positioning the image, we need to help out the caption */
-  .carousel-caption {
+  .-pasta-carousel-caption {
     z-index: 10;
   }
   /* Declare heights because of positioning of img element */
-  .carousel .item {
+  .-pasta-carousel .-pasta-item {
     height: 470px;
     background-color: #777;
   }
-  .carousel-inner > .item > img {
+  .-pasta-carousel-inner > .-pasta-item > img {
     position: absolute;
     top: 0;
     left: 0;
     min-width: 100%;
     height: 470px;
   }
-  .carousel-fade .carousel-inner .item {
+  .-pasta-carousel-fade .-pasta-carousel-inner .-pasta-item {
     opacity: 0;
     -webkit-transition-property: opacity;
     transition-property: opacity;
   }
-  .carousel-fade .carousel-inner .active {
+  .-pasta-carousel-fade .-pasta-carousel-inner .-pasta-active {
     opacity: 1;
   }
-  .carousel-fade .carousel-inner .active.left,
-  .carousel-fade .carousel-inner .active.right {
+  .-pasta-carousel-fade .-pasta-carousel-inner .-pasta-active.-pasta-left,
+  .-pasta-carousel-fade .-pasta-carousel-inner .-pasta-active.-pasta-right {
     left: 0;
     opacity: 0;
     z-index: 1;
   }
-  .carousel-fade .carousel-inner .next.left,
-  .carousel-fade .carousel-inner .prev.right {
+  .-pasta-carousel-fade .-pasta-carousel-inner .-pasta-next.-pasta-left,
+  .-pasta-carousel-fade .-pasta-carousel-inner .-pasta-prev.-pasta-right {
     opacity: 1;
   }
-  .carousel-fade .carousel-control {
+  .-pasta-carousel-fade .-pasta-carousel-control {
     z-index: 2;
   }
-  .carousel-control.left,
-  .carousel-control.right {
+  .-pasta-carousel-control.-pasta-left,
+  .-pasta-carousel-control.-pasta-right {
     background: none;
   }
-  .carousel-control {
+  .-pasta-carousel-control {
     width: 6%;
   }
-  .carousel-inner .container {
+  .-pasta-carousel-inner .-pasta-container {
     position: relative;
   }
-  .carousel-inner {
+  .-pasta-carousel-inner {
     overflow: visible;
   }
-  .carousel-caption {
+  .-pasta-carousel-caption {
     position: absolute;
     top: 100px;
     left: 0;
@@ -268,7 +268,7 @@ body.landing-page {
     right: auto;
     text-align: left;
   }
-  .carousel-caption {
+  .-pasta-carousel-caption {
     position: absolute;
     top: 100px;
     left: 0;
@@ -276,90 +276,90 @@ body.landing-page {
     right: auto;
     text-align: left;
   }
-  .carousel-caption.blank {
+  .-pasta-carousel-caption.-pasta-blank {
     top: 140px;
   }
-  .carousel-image {
+  .-pasta-carousel-image {
     position: absolute;
     right: 10px;
     top: 150px;
   }
-  .carousel-indicators {
+  .-pasta-carousel-indicators {
     padding-right: 60px;
   }
-  .carousel-caption h1 {
+  .-pasta-carousel-caption h1 {
     font-weight: 700;
     font-size: 38px;
     text-transform: uppercase;
     text-shadow: none;
     letter-spacing: -1.5px;
   }
-  .carousel-caption p {
+  .-pasta-carousel-caption p {
     font-weight: 700;
     text-transform: uppercase;
     text-shadow: none;
   }
-  .caption-link {
+  .-pasta-caption-link {
     color: #fff;
     margin-left: 10px;
     text-transform: capitalize;
     font-weight: 400;
   }
-  .caption-link:hover {
+  .-pasta-caption-link:hover {
     text-decoration: none;
     color: inherit;
   }
   /* Sections
   ------------------------- */
-  .services {
+  .-pasta-services {
     padding-top: 60px;
   }
-  .services h2 {
+  .-pasta-services h2 {
     font-size: 20px;
     letter-spacing: -1px;
     font-weight: 600;
     text-transform: uppercase;
   }
-  .features-block {
+  .-pasta-features-block {
     margin-top: 40px;
   }
-  .features-text {
+  .-pasta-features-text {
     margin-top: 40px;
   }
-  .features small {
+  .-pasta-features small {
     color: @navy;
   }
-  .features h2 {
+  .-pasta-features h2 {
     font-size: 18px;
     margin-top: 5px;
   }
-  .features-text-alone {
+  .-pasta-features-text-alone {
     margin: 40px 0;
   }
-  .features-text-alone h1 {
+  .-pasta-features-text-alone h1 {
     font-weight: 200;
   }
-  .features-icon {
+  .-pasta-features-icon {
     color: @navy;
     font-size: 40px;
   }
-  .navy-section {
+  .-pasta-navy-section {
     margin-top: 60px;
     background: @navy;
     color: #fff;
     padding: 20px 0;
   }
-  .gray-section {
+  .-pasta-gray-section {
     background: #f4f4f4;
     margin-top: 60px;
   }
-  .team-member {
+  .-pasta-team-member {
     text-align: center;
   }
-  .team-member img {
+  .-pasta-team-member img {
     margin: auto;
   }
-  .social-icon a {
+  .-pasta-social-icon a {
     background: @navy;
     color: #fff;
     padding: 4px 8px;
@@ -368,37 +368,37 @@ body.landing-page {
     display: block;
     border-radius: 50px;
   }
-  .social-icon a:hover {
+  .-pasta-social-icon a:hover {
     background: darken(@navy, 5%);
   }
-  .img-small {
+  .-pasta-img-small {
     height: 88px;
     width: 88px;
   }
-  .pricing-plan {
+  .-pasta-pricing-plan {
     margin: 20px 30px 0 30px;
     border-radius: 4px;
   }
-  .pricing-plan.selected {
+  .-pasta-pricing-plan.-pasta-selected {
     transform: scale(1.1);
     background: #f4f4f4;
   }
-  .pricing-plan li {
+  .-pasta-pricing-plan li {
     padding: 10px 16px;
     border-top: 1px solid @border-color;
     text-align: center;
     color: #aeaeae;
   }
-  .pricing-plan .pricing-price span {
+  .-pasta-pricing-plan .-pasta-pricing-price span {
     font-weight: 700;
     color: @navy;
   }
-  li.pricing-desc {
+  li.-pasta-pricing-desc {
     font-size: 13px;
     border-top: none;
     padding: 20px 16px;
   }
-  li.pricing-title {
+  li.-pasta-pricing-title {
     background: @navy;
     color: #fff;
     padding: 10px;
@@ -406,50 +406,50 @@ body.landing-page {
     font-size: 22px;
     font-weight: 600;
   }
-  .testimonials {
+  .-pasta-testimonials {
     padding-top: 80px;
     padding-bottom: 90px;
     background-color: @navy;
     background-image: url('../img/landing/avatar_all.png');
   }
-  .big-icon {
+  .-pasta-big-icon {
     font-size: 56px !important;
   }
-  .features .big-icon {
+  .-pasta-features .-pasta-big-icon {
     color: @navy !important;
   }
-  .contact {
+  .-pasta-contact {
     background-image: url('../img/landing/word_map.png');
     background-position: 50% 50%;
     background-repeat: no-repeat;
     margin-top: 60px;
   }
 
-  section.timeline {
+  section.-pasta-timeline {
     padding-bottom: 30px;
   }
-  section.comments {
+  section.-pasta-comments {
     padding-bottom: 80px;
   }
 
-  .comments-avatar {
+  .-pasta-comments-avatar {
     margin-top: 25px;
     margin-left: 22px;
   }
 
-  .comments-avatar .commens-name {
+  .-pasta-comments-avatar .-pasta-commens-name {
     font-weight: 600;
     font-size: 14px;
   }
 
-  .comments-avatar img {
+  .-pasta-comments-avatar img {
     width: 42px;
     height: 42px;
     border-radius: 50%;
     margin-right: 10px;
   }
 
-  .bubble {
+  .-pasta-bubble {
     position: relative;
     height: 120px;
     padding: 20px;
@@ -461,7 +461,7 @@ body.landing-page {
     font-size: 14px;
   }
 
-  .bubble:after {
+  .-pasta-bubble:after {
     content: '';
     position: absolute;
     border-style: solid;
@@ -476,14 +476,14 @@ body.landing-page {
 
   /* Buttons - only primary custom button
   ------------------------- */
-  .btn-primary.btn-outline:hover,
-  .btn-success.btn-outline:hover,
-  .btn-info.btn-outline:hover,
-  .btn-warning.btn-outline:hover,
-  .btn-danger.btn-outline:hover {
+  .-pasta-btn-primary.-pasta-btn-outline:hover,
+  .-pasta-btn-success.-pasta-btn-outline:hover,
+  .-pasta-btn-info.-pasta-btn-outline:hover,
+  .-pasta-btn-warning.-pasta-btn-outline:hover,
+  .-pasta-btn-danger.-pasta-btn-outline:hover {
     color: #fff;
   }
-  .btn-primary {
+  .-pasta-btn-primary {
     background-color: @navy;
     border-color: @navy;
     color: #FFFFFF;
@@ -491,35 +491,35 @@ body.landing-page {
     padding: 10px 20px;
     font-weight: 600;
   }
-  .btn-primary:hover,
-  .btn-primary:focus,
-  .btn-primary:active,
-  .btn-primary.active,
-  .open .dropdown-toggle.btn-primary {
+  .-pasta-btn-primary:hover,
+  .-pasta-btn-primary:focus,
+  .-pasta-btn-primary:active,
+  .-pasta-btn-primary.-pasta-active,
+  .-pasta-open .-pasta-dropdown-toggle.-pasta-btn-primary {
     background-color: darken(@navy, 5%);
     border-color: darken(@navy, 5%);
     color: #FFFFFF;
   }
-  .btn-primary:active,
-  .btn-primary.active,
-  .open .dropdown-toggle.btn-primary {
+  .-pasta-btn-primary:active,
+  .-pasta-btn-primary.-pasta-active,
+  .-pasta-open .-pasta-dropdown-toggle.-pasta-btn-primary {
     background-image: none;
   }
-  .btn-primary.disabled,
-  .btn-primary.disabled:hover,
-  .btn-primary.disabled:focus,
-  .btn-primary.disabled:active,
-  .btn-primary.disabled.active,
-  .btn-primary[disabled],
-  .btn-primary[disabled]:hover,
-  .btn-primary[disabled]:focus,
-  .btn-primary[disabled]:active,
-  .btn-primary.active[disabled],
-  fieldset[disabled] .btn-primary,
-  fieldset[disabled] .btn-primary:hover,
-  fieldset[disabled] .btn-primary:focus,
-  fieldset[disabled] .btn-primary:active,
-  fieldset[disabled] .btn-primary.active {
+  .-pasta-btn-primary.-pasta-disabled,
+  .-pasta-btn-primary.-pasta-disabled:hover,
+  .-pasta-btn-primary.-pasta-disabled:focus,
+  .-pasta-btn-primary.-pasta-disabled:active,
+  .-pasta-btn-primary.-pasta-disabled.-pasta-active,
+  .-pasta-btn-primary[disabled],
+  .-pasta-btn-primary[disabled]:hover,
+  .-pasta-btn-primary[disabled]:focus,
+  .-pasta-btn-primary[disabled]:active,
+  .-pasta-btn-primary.-pasta-active[disabled],
+  fieldset[disabled] .-pasta-btn-primary,
+  fieldset[disabled] .-pasta-btn-primary:hover,
+  fieldset[disabled] .-pasta-btn-primary:focus,
+  fieldset[disabled] .-pasta-btn-primary:active,
+  fieldset[disabled] .-pasta-btn-primary.-pasta-active {
     background-color: #1dc5a3;
     border-color: #1dc5a3;
   }
@@ -527,91 +527,91 @@ body.landing-page {
   -------------------------------------------------- */
   @media (min-width: 768px) {
     /* Navbar positioning foo */
-    .navbar-wrapper {
+    .-pasta-navbar-wrapper {
       margin-top: 20px;
     }
 
-    .navbar-wrapper .container {
+    .-pasta-navbar-wrapper .-pasta-container {
       padding-right: 15px;
       padding-left: 15px;
     }
 
-    .navbar-wrapper .navbar {
+    .-pasta-navbar-wrapper .-pasta-navbar {
       padding-right: 0;
       padding-left: 0;
     }
 
     /* The navbar becomes detached from the top, so we round the corners */
-    .navbar-wrapper .navbar {
+    .-pasta-navbar-wrapper .-pasta-navbar {
       border-radius: 4px;
     }
 
     /* Bump up size of carousel content */
-    .carousel-caption p {
+    .-pasta-carousel-caption p {
       margin-bottom: 20px;
       font-size: 14px;
       line-height: 1.4;
     }
 
-    .featurette-heading {
+    .-pasta-featurette-heading {
       font-size: 50px;
     }
   }
   @media (max-width: 992px) {
-    .carousel-image {
+    .-pasta-carousel-image {
       display: none;
     }
   }
   @media (max-width: 768px) {
-    .carousel-caption,
-    .carousel-caption.blank {
+    .-pasta-carousel-caption,
+    .-pasta-carousel-caption.-pasta-blank {
       left: 5%;
       top: 80px;
     }
 
-    .carousel-caption h1 {
+    .-pasta-carousel-caption h1 {
       font-size: 28px;
     }
 
-    .navbar.navbar-scroll .navbar-brand {
+    .-pasta-navbar.-pasta-navbar-scroll .-pasta-navbar-brand {
       margin-top: 6px;
     }
 
-    .navbar-default {
+    .-pasta-navbar-default {
       background-color: #fff;
       border-color: #fff;
       padding: 15px 0;
     }
 
-    .navbar-default .navbar-nav > .active > a:focus {
+    .-pasta-navbar-default .-pasta-navbar-nav > .-pasta-active > a:focus {
       background: transparent;
       color: inherit;
     }
 
-    .navbar-default .nav li a {
+    .-pasta-navbar-default .-pasta-nav li a {
       color: @text-color;
     }
 
-    .navbar-default .nav li a:hover {
+    .-pasta-navbar-default .-pasta-nav li a:hover {
       color: @navy;
     }
 
-    .navbar-wrapper .navbar {
+    .-pasta-navbar-wrapper .-pasta-navbar {
       padding-top: 0;
       padding-bottom: 5px;
       border-bottom: 1px solid @border-color;
       border-radius: 0;
     }
 
-    .nav > li > a {
+    .-pasta-nav > li > a {
       padding: 25px 10px 15px 10px;
     }
 
-    .navbar-nav > li > a {
+    .-pasta-navbar-nav > li > a {
       padding: 20px 10px;
     }
 
-    .navbar .navbar-brand {
+    .-pasta-navbar .-pasta-navbar-brand {
       margin-top: 6px;
       border-radius: 5px;
       font-size: 12px;
@@ -619,33 +619,33 @@ body.landing-page {
       height: auto;
     }
 
-    .navbar-wrapper .navbar {
+    .-pasta-navbar-wrapper .-pasta-navbar {
       padding-left: 15px;
       padding-right: 5px;
     }
 
-    .navbar-default .navbar-nav > .active > a,
-    .navbar-default .navbar-nav > .active > a:hover {
+    .-pasta-navbar-default .-pasta-navbar-nav > .-pasta-active > a,
+    .-pasta-navbar-default .-pasta-navbar-nav > .-pasta-active > a:hover {
       color: inherit;
     }
 
-    .carousel-control {
+    .-pasta-carousel-control {
       display: none;
     }
   }
   @media (min-width: 992px) {
-    .featurette-heading {
+    .-pasta-featurette-heading {
       margin-top: 120px;
     }
   }
 
   @media (max-width: 768px) {
-    .navbar .navbar-header {
+    .-pasta-navbar .-pasta-navbar-header {
       display: block;
       float: none;
     }
 
-    .navbar .navbar-header .navbar-toggle {
+    .-pasta-navbar .-pasta-navbar-header .-pasta-navbar-toggle {
       background-color: #ffffff;
       padding: 9px 10px;
       border: none;
