--- a/pasta-frontend/src/inspinia/less/mixins.less
+++ b/pasta-frontend/src/inspinia/less/mixins.less
@@ -1,4 +1,4 @@
-.border-radius (@radius: 3px) {
+.-pasta-border-radius (@radius: 3px) {
   -webkit-border-radius: @radius;
   -moz-border-radius: @radius;
   border-radius: @radius;
@@ -8,7 +8,7 @@
   background-clip: padding-box;
 }
 
-.opacity (@opacity: 0.5) {
+.-pasta-opacity (@opacity: 0.5) {
   -webkit-opacity: @opacity;
   -moz-opacity: @opacity;
   opacity: @opacity;
