--- a/pasta-frontend/src/inspinia/less/navigation.less
+++ b/pasta-frontend/src/inspinia/less/navigation.less
@@ -1,61 +1,61 @@
-.nav > li > a {
+.-pasta-nav > li > a {
   color: @nav-text-color;
   font-weight: 600;
   padding: 14px 20px 14px 25px;
 }
 
-.nav.navbar-right > li > a {
+.-pasta-nav.-pasta-navbar-right > li > a {
   color: #999c9e;
 }
 
-.nav > li.active > a {
+.-pasta-nav > li.-pasta-active > a {
   color: #ffffff;
 }
 
-.navbar-default .nav > li > a:hover, .navbar-default .nav > li > a:focus {
+.-pasta-navbar-default .-pasta-nav > li > a:hover, .-pasta-navbar-default .-pasta-nav > li > a:focus {
   background-color: darken(@nav-bg, 3%);
   color: white;
 }
 
-.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
+.-pasta-nav .-pasta-open > a, .-pasta-nav .-pasta-open > a:hover, .-pasta-nav .-pasta-open > a:focus {
   background: #fff;
 }
 
-.nav.navbar-top-links > li > a:hover, .nav.navbar-top-links > li > a:focus {
+.-pasta-nav.-pasta-navbar-top-links > li > a:hover, .-pasta-nav.-pasta-navbar-top-links > li > a:focus {
   background-color: transparent;
 }
 
-.nav > li > a i {
+.-pasta-nav > li > a i {
   margin-right: 6px;
 }
 
-.navbar {
+.-pasta-navbar {
   border: 0;
 }
 
-.navbar-default {
+.-pasta-navbar-default {
   background-color: transparent;
   border-color: @nav-bg;
 }
 
-.navbar-top-links li {
+.-pasta-navbar-top-links li {
   display: inline-block;
 }
 
-.navbar-top-links li:last-child {
+.-pasta-navbar-top-links li:last-child {
   margin-right: 40px;
 }
 
-.body-small .navbar-top-links li:last-child {
+.-pasta-body-small .-pasta-navbar-top-links li:last-child {
   margin-right: 0;
 }
 
-.navbar-top-links li a {
+.-pasta-navbar-top-links li a {
   padding: 20px 10px;
   min-height: 50px;
 }
 
-.dropdown-menu {
+.-pasta-dropdown-menu {
   border: medium none;
   border-radius: 3px;
   box-shadow: 0 0 3px rgba(86, 96, 117, 0.7);
@@ -71,7 +71,7 @@
   z-index: 1000;
 }
 
-.dropdown-menu > li > a {
+.-pasta-dropdown-menu > li > a {
   border-radius: 3px;
   color: inherit;
   line-height: 25px;
@@ -80,106 +80,106 @@
   font-weight: normal;
 }
 
-.dropdown-menu > li > a.font-bold {
+.-pasta-dropdown-menu > li > a.-pasta-font-bold {
   font-weight: 600;
 }
 
-.navbar-top-links .dropdown-menu li {
+.-pasta-navbar-top-links .-pasta-dropdown-menu li {
   display: block;
 }
 
-.navbar-top-links .dropdown-menu li:last-child {
+.-pasta-navbar-top-links .-pasta-dropdown-menu li:last-child {
   margin-right: 0;
 }
 
-.navbar-top-links .dropdown-menu li a {
+.-pasta-navbar-top-links .-pasta-dropdown-menu li a {
   padding: 3px 20px;
   min-height: 0;
 }
 
-.navbar-top-links .dropdown-menu li a div {
+.-pasta-navbar-top-links .-pasta-dropdown-menu li a div {
   white-space: normal;
 }
 
-.navbar-top-links .dropdown-messages,
-.navbar-top-links .dropdown-tasks,
-.navbar-top-links .dropdown-alerts {
+.-pasta-navbar-top-links .-pasta-dropdown-messages,
+.-pasta-navbar-top-links .-pasta-dropdown-tasks,
+.-pasta-navbar-top-links .-pasta-dropdown-alerts {
   width: 310px;
   min-width: 0;
 }
 
-.navbar-top-links .dropdown-messages {
+.-pasta-navbar-top-links .-pasta-dropdown-messages {
   margin-left: 5px;
 }
 
-.navbar-top-links .dropdown-tasks {
+.-pasta-navbar-top-links .-pasta-dropdown-tasks {
   margin-left: -59px;
 }
 
-.navbar-top-links .dropdown-alerts {
+.-pasta-navbar-top-links .-pasta-dropdown-alerts {
   margin-left: -123px;
 }
 
-.navbar-top-links .dropdown-user {
+.-pasta-navbar-top-links .-pasta-dropdown-user {
   right: 0;
   left: auto;
 }
 
-.dropdown-messages, .dropdown-alerts {
+.-pasta-dropdown-messages, .-pasta-dropdown-alerts {
   padding: 10px 10px 10px 10px;
 }
 
-.dropdown-messages li a, .dropdown-alerts li a {
+.-pasta-dropdown-messages li a, .-pasta-dropdown-alerts li a {
   font-size: 12px;
 }
 
-.dropdown-messages li em, .dropdown-alerts li em {
+.-pasta-dropdown-messages li em, .-pasta-dropdown-alerts li em {
   font-size: 10px;
 }
 
-.nav.navbar-top-links .dropdown-alerts a {
+.-pasta-nav.-pasta-navbar-top-links .-pasta-dropdown-alerts a {
   font-size: 12px;
 }
 
-.nav-header {
+.-pasta-nav-header {
   padding: 33px 25px;
   background: @nav-profil-pattern;
 
 }
 
-.pace-done .nav-header {
+.-pasta-pace-done .-pasta-nav-header {
   transition: all 0.4s;
 }
 
-.nav > li.active {
+.-pasta-nav > li.-pasta-active {
   border-left: 4px solid darken(@navy, 2%);
   background: darken(@nav-bg, 3%);
 }
 
-.nav.nav-second-level > li.active {
+.-pasta-nav.-pasta-nav-second-level > li.-pasta-active {
   border: none;
 }
 
-.nav.nav-second-level.collapse[style] {
+.-pasta-nav.-pasta-nav-second-level.-pasta-collapse[style] {
   height: auto !important;
 }
 
-.nav-header a {
+.-pasta-nav-header a {
   color: #DFE4ED;
 }
 
-.nav-header .text-muted {
+.-pasta-nav-header .-pasta-text-muted {
   color: #8095a8;
 }
 
-.minimalize-styl-2 {
+.-pasta-minimalize-styl-2 {
   padding: 4px 12px;
   margin: 14px 5px 5px 20px;
   font-size: 14px;
   float: left;
 }
 
-.navbar-form-custom {
+.-pasta-navbar-form-custom {
   float: left;
   height: 50px;
   padding: 0;
@@ -187,15 +187,15 @@
   display: inline-table;
 }
 
-.navbar-form-custom .form-group {
+.-pasta-navbar-form-custom .-pasta-form-group {
   margin-bottom: 0;
 }
 
-.nav.navbar-top-links a {
+.-pasta-nav.-pasta-navbar-top-links a {
   font-size: 14px;
 }
 
-.navbar-form-custom .form-control {
+.-pasta-navbar-form-custom .-pasta-form-control {
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
   border: medium none;
   font-size: 14px;
@@ -204,7 +204,7 @@
   z-index: 2000;
 }
 
-.count-info .label {
+.-pasta-count-info .-pasta-label {
   line-height: 12px;
   padding: 2px 5px;
   position: absolute;
@@ -212,58 +212,58 @@
   top: 12px;
 }
 
-.arrow {
+.-pasta-arrow {
   float: right;
 }
 
-.fa.arrow:before {
+.-pasta-fa.-pasta-arrow:before {
   content: "\f104";
 }
 
-.active > a > .fa.arrow:before {
+.-pasta-active > a > .-pasta-fa.-pasta-arrow:before {
   content: "\f107";
 }
 
-.nav-second-level li,
-.nav-third-level li {
+.-pasta-nav-second-level li,
+.-pasta-nav-third-level li {
   border-bottom: none !important;
 }
 
-.nav-second-level li a {
+.-pasta-nav-second-level li a {
   padding: 7px 10px 7px 10px;
   padding-left: 52px;
 }
 
-.nav-third-level li a {
+.-pasta-nav-third-level li a {
   padding-left: 62px;
 }
 
-.nav-second-level li:last-child {
+.-pasta-nav-second-level li:last-child {
   margin-bottom: 10px;
 }
 
-body:not(.fixed-sidebar):not(.canvas-menu).mini-navbar .nav li:hover > .nav-second-level,
-.mini-navbar .nav li:focus > .nav-second-level {
+body:not(.-pasta-fixed-sidebar):not(.-pasta-canvas-menu).-pasta-mini-navbar .-pasta-nav li:hover > .-pasta-nav-second-level,
+.-pasta-mini-navbar .-pasta-nav li:focus > .-pasta-nav-second-level {
   display: block;
   border-radius: 0 2px 2px 0;
   min-width: 140px;
   height: auto;
 }
 
-body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
+body.-pasta-mini-navbar .-pasta-navbar-default .-pasta-nav > li > .-pasta-nav-second-level li a {
   font-size: 12px;
   border-radius: 3px;
 }
 
-.fixed-nav .slimScrollDiv #side-menu {
+.-pasta-fixed-nav .-pasta-slimScrollDiv #side-menu {
   padding-bottom: 60px;
 }
 
-.mini-navbar .nav-second-level li a {
+.-pasta-mini-navbar .-pasta-nav-second-level li a {
   padding: 10px 10px 10px 15px;
 }
 
-.mini-navbar .nav-second-level {
+.-pasta-mini-navbar .-pasta-nav-second-level {
   position: absolute;
   left: 70px;
   top: 0;
@@ -272,45 +272,45 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
   font-size: 12px;
 }
 
-.canvas-menu.mini-navbar .nav-second-level {
+.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-nav-second-level {
   background: darken(@nav-bg, 3%);
 }
 
-.mini-navbar li.active .nav-second-level {
+.-pasta-mini-navbar li.-pasta-active .-pasta-nav-second-level {
   left: 65px
 }
 
-.navbar-default .special_link a {
+.-pasta-navbar-default .-pasta-special_link a {
   background: @navy;
   color: white;
 }
 
-.navbar-default .special_link a:hover {
+.-pasta-navbar-default .-pasta-special_link a:hover {
   background: #17987e !important;
   color: white;
 }
 
-.navbar-default .special_link a span.label {
+.-pasta-navbar-default .-pasta-special_link a span.-pasta-label {
   background: #fff;
   color: @navy;
 }
 
-.navbar-default .landing_link a {
+.-pasta-navbar-default .-pasta-landing_link a {
   background: lighten(@navy, 3%);
   color: white;
 }
 
-.navbar-default .landing_link a:hover {
+.-pasta-navbar-default .-pasta-landing_link a:hover {
   background: @navy !important;
   color: white;
 }
 
-.navbar-default .landing_link a span.label {
+.-pasta-navbar-default .-pasta-landing_link a span.-pasta-label {
   background: #fff;
   color: lighten(@navy, 3%);
 }
 
-.logo-element {
+.-pasta-logo-element {
   text-align: center;
   font-size: 18px;
   font-weight: 600;
@@ -319,204 +319,204 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
   padding: 18px 0;
 }
 
-.pace-done .navbar-static-side, .pace-done .nav-header, .pace-done li.active, .pace-done #page-wrapper, .pace-done .footer {
+.-pasta-pace-done .-pasta-navbar-static-side, .-pasta-pace-done .-pasta-nav-header, .-pasta-pace-done li.-pasta-active, .-pasta-pace-done #page-wrapper, .-pasta-pace-done .-pasta-footer {
   -webkit-transition: all 0.4s;
   -moz-transition: all 0.4s;
   -o-transition: all 0.4s;
   transition: all 0.4s;
 }
 
-.navbar-fixed-top {
+.-pasta-navbar-fixed-top {
   background: #fff;
   transition-duration: 0.4s;
   border-bottom: 1px solid #e7eaec !important;
   z-index: 2030;
 }
 
-.navbar-fixed-top, .navbar-static-top {
+.-pasta-navbar-fixed-top, .-pasta-navbar-static-top {
   background: @gray;
 }
 
-.fixed-nav #wrapper {
+.-pasta-fixed-nav #wrapper {
   margin-top: 0;
 }
 
-body.fixed-nav #wrapper .navbar-static-side,
-body.fixed-nav #wrapper #page-wrapper {
+body.-pasta-fixed-nav #wrapper .-pasta-navbar-static-side,
+body.-pasta-fixed-nav #wrapper #page-wrapper {
   margin-top: 60px;
 }
 
-body.top-navigation.fixed-nav #wrapper #page-wrapper {
+body.-pasta-top-navigation.-pasta-fixed-nav #wrapper #page-wrapper {
   margin-top: 0;
 }
 
-body.fixed-nav.fixed-nav-basic .navbar-fixed-top {
+body.-pasta-fixed-nav.-pasta-fixed-nav-basic .-pasta-navbar-fixed-top {
   left: 220px;
 }
 
-body.fixed-nav.fixed-nav-basic.mini-navbar .navbar-fixed-top {
+body.-pasta-fixed-nav.-pasta-fixed-nav-basic.-pasta-mini-navbar .-pasta-navbar-fixed-top {
   left: 70px;
 }
 
-body.fixed-nav.fixed-nav-basic.fixed-sidebar.mini-navbar .navbar-fixed-top {
+body.-pasta-fixed-nav.-pasta-fixed-nav-basic.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-navbar-fixed-top {
   left: 0;
 }
 
-body.fixed-nav.fixed-nav-basic #wrapper .navbar-static-side {
+body.-pasta-fixed-nav.-pasta-fixed-nav-basic #wrapper .-pasta-navbar-static-side {
   margin-top: 0;
 }
 
-body.fixed-nav.fixed-nav-basic.body-small .navbar-fixed-top {
+body.-pasta-fixed-nav.-pasta-fixed-nav-basic.-pasta-body-small .-pasta-navbar-fixed-top {
   left: 0;
 }
 
-body.fixed-nav.fixed-nav-basic.fixed-sidebar.mini-navbar.body-small .navbar-fixed-top {
+body.-pasta-fixed-nav.-pasta-fixed-nav-basic.-pasta-fixed-sidebar.-pasta-mini-navbar.-pasta-body-small .-pasta-navbar-fixed-top {
   left: 220px;
 }
 
-.fixed-nav .minimalize-styl-2 {
+.-pasta-fixed-nav .-pasta-minimalize-styl-2 {
   margin: 14px 5px 5px 15px;
 }
 
-.body-small .navbar-fixed-top {
+.-pasta-body-small .-pasta-navbar-fixed-top {
   margin-left: 0;
 }
 
-body.mini-navbar .navbar-static-side {
+body.-pasta-mini-navbar .-pasta-navbar-static-side {
   width: 70px;
 }
 
-body.mini-navbar .profile-element, body.mini-navbar .nav-label, body.mini-navbar .navbar-default .nav li a span {
+body.-pasta-mini-navbar .-pasta-profile-element, body.-pasta-mini-navbar .-pasta-nav-label, body.-pasta-mini-navbar .-pasta-navbar-default .-pasta-nav li a span {
   display: none;
 }
 
-body.canvas-menu .profile-element {
+body.-pasta-canvas-menu .-pasta-profile-element {
   display: block;
 }
 
-body:not(.fixed-sidebar):not(.canvas-menu).mini-navbar .nav-second-level {
+body:not(.-pasta-fixed-sidebar):not(.-pasta-canvas-menu).-pasta-mini-navbar .-pasta-nav-second-level {
   display: none;
 }
 
-body.mini-navbar .navbar-default .nav > li > a {
+body.-pasta-mini-navbar .-pasta-navbar-default .-pasta-nav > li > a {
   font-size: 16px;
 }
 
-body.mini-navbar .logo-element {
+body.-pasta-mini-navbar .-pasta-logo-element {
   display: block;
 }
 
-body.canvas-menu .logo-element {
+body.-pasta-canvas-menu .-pasta-logo-element {
   display: none;
 }
 
-body.mini-navbar .nav-header {
+body.-pasta-mini-navbar .-pasta-nav-header {
   padding: 0;
   background-color: @navy;
 }
 
-body.canvas-menu .nav-header {
+body.-pasta-canvas-menu .-pasta-nav-header {
   padding: 33px 25px;
 }
 
-body.mini-navbar #page-wrapper {
+body.-pasta-mini-navbar #page-wrapper {
   margin: 0 0 0 70px;
 }
 
-body.fixed-sidebar.mini-navbar .footer,
-body.canvas-menu.mini-navbar .footer {
+body.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-footer,
+body.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-footer {
   margin: 0 0 0 0 !important;
 }
 
-body.canvas-menu.mini-navbar #page-wrapper,
-body.canvas-menu.mini-navbar .footer {
+body.-pasta-canvas-menu.-pasta-mini-navbar #page-wrapper,
+body.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-footer {
   margin: 0 0 0 0;
 }
 
-body.fixed-sidebar .navbar-static-side,
-body.canvas-menu .navbar-static-side {
+body.-pasta-fixed-sidebar .-pasta-navbar-static-side,
+body.-pasta-canvas-menu .-pasta-navbar-static-side {
   position: fixed;
   width: @sidebar-width;
   z-index: 2001;
   height: 100%;
 }
 
-body.fixed-sidebar.mini-navbar .navbar-static-side {
+body.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-navbar-static-side {
   width: 0;
 }
 
-body.fixed-sidebar.mini-navbar #page-wrapper {
+body.-pasta-fixed-sidebar.-pasta-mini-navbar #page-wrapper {
   margin: 0 0 0 0;
 }
 
-body.body-small.fixed-sidebar.mini-navbar #page-wrapper {
+body.-pasta-body-small.-pasta-fixed-sidebar.-pasta-mini-navbar #page-wrapper {
   margin: 0 0 0 @sidebar-width;
 }
 
-body.body-small.fixed-sidebar.mini-navbar .navbar-static-side {
+body.-pasta-body-small.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-navbar-static-side {
   width: @sidebar-width;
 }
 
-.fixed-sidebar.mini-navbar .nav li:focus > .nav-second-level,
-.canvas-menu.mini-navbar .nav li:focus > .nav-second-level {
+.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-nav li:focus > .-pasta-nav-second-level,
+.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-nav li:focus > .-pasta-nav-second-level {
   display: block;
   height: auto;
 }
 
-body.fixed-sidebar.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
+body.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-navbar-default .-pasta-nav > li > .-pasta-nav-second-level li a {
   font-size: 12px;
   border-radius: 3px;
 }
 
-body.canvas-menu.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
+body.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-navbar-default .-pasta-nav > li > .-pasta-nav-second-level li a {
   font-size: 13px;
   border-radius: 3px;
 }
 
-.fixed-sidebar.mini-navbar .nav-second-level li a,
-.canvas-menu.mini-navbar .nav-second-level li a {
+.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-nav-second-level li a,
+.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-nav-second-level li a {
   padding: 10px 10px 10px 15px;
 }
 
-.fixed-sidebar.mini-navbar .nav-second-level,
-.canvas-menu.mini-navbar .nav-second-level {
+.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-nav-second-level,
+.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-nav-second-level {
   position: relative;
   padding: 0;
   font-size: 13px;
 }
 
-.fixed-sidebar.mini-navbar li.active .nav-second-level,
-.canvas-menu.mini-navbar li.active .nav-second-level {
+.-pasta-fixed-sidebar.-pasta-mini-navbar li.-pasta-active .-pasta-nav-second-level,
+.-pasta-canvas-menu.-pasta-mini-navbar li.-pasta-active .-pasta-nav-second-level {
   left: 0
 }
 
-body.fixed-sidebar.mini-navbar .navbar-default .nav > li > a,
-body.canvas-menu.mini-navbar .navbar-default .nav > li > a {
+body.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-navbar-default .-pasta-nav > li > a,
+body.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-navbar-default .-pasta-nav > li > a {
   font-size: 13px;
 }
 
-body.fixed-sidebar.mini-navbar .nav-label,
-body.fixed-sidebar.mini-navbar .navbar-default .nav li a span,
-body.canvas-menu.mini-navbar .nav-label,
-body.canvas-menu.mini-navbar .navbar-default .nav li a span {
+body.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-nav-label,
+body.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-navbar-default .-pasta-nav li a span,
+body.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-nav-label,
+body.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-navbar-default .-pasta-nav li a span {
   display: inline;
 }
 
-body.canvas-menu.mini-navbar .navbar-default .nav li .profile-element a span {
+body.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-navbar-default .-pasta-nav li .-pasta-profile-element a span {
   display: block;
 }
 
-.canvas-menu.mini-navbar .nav-second-level li a,
-.fixed-sidebar.mini-navbar .nav-second-level li a {
+.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-nav-second-level li a,
+.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-nav-second-level li a {
   padding: 7px 10px 7px 52px
 }
 
-.fixed-sidebar.mini-navbar .nav-second-level,
-.canvas-menu.mini-navbar .nav-second-level {
+.-pasta-fixed-sidebar.-pasta-mini-navbar .-pasta-nav-second-level,
+.-pasta-canvas-menu.-pasta-mini-navbar .-pasta-nav-second-level {
   left: 0
 }
 
-body.canvas-menu nav.navbar-static-side {
+body.-pasta-canvas-menu nav.-pasta-navbar-static-side {
   z-index: 2001;
   background: #2f4050;
   height: 100%;
@@ -524,7 +524,7 @@ body.canvas-menu nav.navbar-static-side {
   display: none;
 }
 
-body.canvas-menu.mini-navbar nav.navbar-static-side {
+body.-pasta-canvas-menu.-pasta-mini-navbar nav.-pasta-navbar-static-side {
   display: block;
   width: 220px;
 }
