--- a/pasta-frontend/src/inspinia/less/sidebar.less
+++ b/pasta-frontend/src/inspinia/less/sidebar.less
@@ -1,4 +1,4 @@
-.sidebard-panel {
+.-pasta-sidebard-panel {
   width: 220px;
   background: darken(@gray, 3%);
   padding: 10px 20px;
@@ -6,35 +6,35 @@
   right: 0;
 }
 
-.sidebard-panel .feed-element img.img-circle {
+.-pasta-sidebard-panel .-pasta-feed-element img.-pasta-img-circle {
   width: 32px;
   height: 32px;
 }
 
-.sidebard-panel .feed-element, .media-body, .sidebard-panel p {
+.-pasta-sidebard-panel .-pasta-feed-element, .-pasta-media-body, .-pasta-sidebard-panel p {
   font-size: 12px;
 }
 
-.sidebard-panel .feed-element {
+.-pasta-sidebard-panel .-pasta-feed-element {
   margin-top: 20px;
   padding-bottom: 0;
 }
 
-.sidebard-panel .list-group {
+.-pasta-sidebard-panel .-pasta-list-group {
   margin-bottom: 10px;
 }
 
-.sidebard-panel .list-group .list-group-item {
+.-pasta-sidebard-panel .-pasta-list-group .-pasta-list-group-item {
   padding: 5px 0;
   font-size: 12px;
   border: 0;
 }
 
-.sidebar-content .wrapper, .wrapper.sidebar-content {
+.-pasta-sidebar-content .-pasta-wrapper, .-pasta-wrapper.-pasta-sidebar-content {
   padding-right: 230px !important;
 }
 
-.body-small .sidebar-content .wrapper, .body-small .wrapper.sidebar-content {
+.-pasta-body-small .-pasta-sidebar-content .-pasta-wrapper, .-pasta-body-small .-pasta-wrapper.-pasta-sidebar-content {
   padding-right: 20px !important;
 }
 
@@ -53,36 +53,36 @@
   right: -260px;
 }
 
-#right-sidebar.sidebar-open {
+#right-sidebar.-pasta-sidebar-open {
   right: 0;
 }
 
-#right-sidebar.sidebar-open.sidebar-top {
+#right-sidebar.-pasta-sidebar-open.-pasta-sidebar-top {
   top: 0;
   border-top: none;
 }
 
-.sidebar-container {
+.-pasta-sidebar-container {
 
-  ul.nav-tabs {
+  ul.-pasta-nav-tabs {
     border: none;
   }
 
-  ul.nav-tabs.navs-4 li {
+  ul.-pasta-nav-tabs.-pasta-navs-4 li {
     width: 25%;
   }
-  ul.nav-tabs.navs-3 li {
+  ul.-pasta-nav-tabs.-pasta-navs-3 li {
     width: 33.3333%;
   }
-  ul.nav-tabs.navs-2 li {
+  ul.-pasta-nav-tabs.-pasta-navs-2 li {
     width: 50%;
   }
 
-  ul.nav-tabs li {
+  ul.-pasta-nav-tabs li {
     border: none;
   }
 
-  ul.nav-tabs li a {
+  ul.-pasta-nav-tabs li a {
     border: none;
     padding: 12px 10px;
     margin: 0;
@@ -94,7 +94,7 @@
     border-right: 1px solid lighten(@nav-bg, 2%);
   }
 
-  ul.nav-tabs li.active a {
+  ul.-pasta-nav-tabs li.-pasta-active a {
     border: none;
     background: #f9f9f9;
     color: @text-color;
@@ -102,19 +102,19 @@
 
   }
 
-  .nav-tabs > li.active > a:hover,
-  .nav-tabs > li.active > a:focus {
+  .-pasta-nav-tabs > li.-pasta-active > a:hover,
+  .-pasta-nav-tabs > li.-pasta-active > a:focus {
 
     border: none;
 
   }
 
-  ul.sidebar-list {
+  ul.-pasta-sidebar-list {
     margin: 0;
     padding: 0;
   }
 
-  ul.sidebar-list li {
+  ul.-pasta-sidebar-list li {
     border-bottom: 1px solid @border-color;
     padding: 15px 20px;
     list-style: none;
@@ -122,29 +122,29 @@
     font-size: 12px;
   }
 
-  ul.sidebar-list li:nth-child(2n+2) {
+  ul.-pasta-sidebar-list li:nth-child(2n+2) {
     //    background: #f9f9f9;
   }
 
-  .sidebar-message:nth-child(2n+2) {
+  .-pasta-sidebar-message:nth-child(2n+2) {
     background: #f9f9f9;
   }
 
-  ul.sidebar-list li a {
+  ul.-pasta-sidebar-list li a {
     text-decoration: none;
     color: inherit;
   }
 
-  .sidebar-content {
+  .-pasta-sidebar-content {
     padding: 15px 20px;
     font-size: 12px;
   }
 
-  .date-item {
+  .-pasta-date-item {
 
   }
 
-  .sidebar-title {
+  .-pasta-sidebar-title {
     background: #f9f9f9;
     padding: 20px;
     border-bottom: 1px solid @border-color;
@@ -155,7 +155,7 @@
     }
   }
 
-  .tab-content {
+  .-pasta-tab-content {
 
     h4 {
       margin-bottom: 5px;
@@ -163,30 +163,30 @@
 
   }
 
-  .sidebar-message > a > .pull-left {
+  .-pasta-sidebar-message > a > .-pasta-pull-left {
     margin-right: 10px;
   }
 
-  .sidebar-message > a {
+  .-pasta-sidebar-message > a {
     text-decoration: none;
     color: inherit;
   }
 
-  .sidebar-message {
+  .-pasta-sidebar-message {
     padding: 15px 20px;
   }
 
-  .sidebar-message:hover {
+  .-pasta-sidebar-message:hover {
     //    background: #f9f9f9;
   }
 
-  .sidebar-message .message-avatar {
+  .-pasta-sidebar-message .-pasta-message-avatar {
     height: 38px;
     width: 38px;
     border-radius: 50%;
   }
 
-  .setings-item {
+  .-pasta-setings-item {
     padding: 15px 20px;
     border-bottom: 1px solid @border-color;
   }
