--- a/pasta-frontend/src/inspinia/less/variables.less
+++ b/pasta-frontend/src/inspinia/less/variables.less
@@ -35,5 +35,5 @@
 
 //Navigation
 @nav-bg: #2F4050;
-@nav-profil-pattern: url("patterns/header-profile.png") no-repeat;
+@nav-profil-pattern: url("../../img/patterns/header-profile.png") no-repeat;
 @nav-text-color: #a7b1c2;
